Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -1,10 +1,34 @@
-제목
+01 C언어 기반의 C++
 =======================
-> 인용
+# 1. printf와 scanf를 대신하는 입출력 방식
+## 1.1. 문자열 Hello world 출력
 
-# 1. 대 주제
-> 인용
-## 1.1. 소 주제
+**HelloWorld.cpp**
+```
+#include<iostream>
+// 표준이 재정립 되면서 h 확장자를 생략해지게 되었다.
+
+int main(void) {
+	int num = 20;
+	std::cout << "hello world" << std::endl;
+	std::cout << "hello" << "world" << std::endl;
+	std::cout << "123" << "456" << std::endl;
+
+	std::cout << num << ' ' << std::endl;
+	std::cout << ' ' << 3.14 << std::endl;
+
+	return 0;
+}
+//  << std::cout; 출력 print
+//  << std::endl; 개행
+// "123" << "456" -> 123456 이 된다. (문자열 병합)
+
+// 문자 + 숫자 => 문자
+// 숫자가 문자열로 변환이 되어 더해진다.
+```
+
+      
+
 ### 1.1.1. 내용1
 ```
 내용1
