--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -1,8 +1,10 @@
 01 C언어 기반의 C++
 =======================
 # 1. printf와 scanf를 대신하는 입출력 방식
-## 1.1. 문자열 Hello world 출력
-
+## 1.1. 문자열 Hello world 출력  
+  
+![cpp01](https://user-images.githubusercontent.com/50267433/74079090-ea415280-4a75-11ea-93c2-38f7e0db6302.PNG)
+  
 **HelloWorld.cpp**
 ```
 #include<iostream>
