--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -28,14 +28,32 @@ int main(void) {
 // 문자 + 숫자 => 문자
 // 숫자가 문자열로 변환이 되어 더해진다.
 ```
-
-      
-
-### 1.1.1. 내용1
+## 1.2. 입력 및 처리후 출력  
+   
+![cpp02](https://user-images.githubusercontent.com/50267433/74079196-6daf7380-4a77-11ea-9003-722d9d9b3c3c.PNG)
+  
+**SimpleAdder.cpp**
 ```
-내용1
+#include<iostream>
+
+int main(void) {
+	int val1;
+	std::cout << "첫 번째 숫자 입력: ";
+	// 문자열을 consoleOutput에 넣어라
+	std::cin >> val1;
+	// consoleIn 값을 val1에 넣어라
+	
+	int val2;
+	std::cout << "두 번째 숫자 입력: ";
+	// 문자열을 consoleOutput에 넣어라
+	std::cin >> val2;
+	// consoleIn 값을 val1에 넣어라
+
+	int result = val1 + val2;
+	std::cout << "덧셈결과: " << result << std::endl;
+	return 0;
+}
 ```
-## 1.2. 소 주제
 ### 1.2.1. 내용1
 ```
 내용1
