Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -28,6 +28,7 @@ int main(void) {
 // 문자 + 숫자 => 문자
 // 숫자가 문자열로 변환이 되어 더해진다.
 ```
+  
 ## 1.2. 입력 및 처리후 출력  
    
 ![cpp02](https://user-images.githubusercontent.com/50267433/74079196-6daf7380-4a77-11ea-9003-722d9d9b3c3c.PNG)
@@ -54,10 +55,38 @@ int main(void) {
 	return 0;
 }
 ```
-### 1.2.1. 내용1
+   
+## 1.3. C++ 지역변수 선언 
+   
+![cpp03](https://user-images.githubusercontent.com/50267433/74079309-c2072300-4a78-11ea-99e1-1f7ab3b62d76.PNG)
+  
+**BetweenAdder**
 ```
-내용1
+#include<iostream>
+
+int main(void) {
+	int val1, val2;
+	int result = 0;
+	std::cout << "두 개의 숫자 입력: ";
+	std::cin >> val1 >> val2;
+	// 공백을 기준으로 처음은 val1 다음은 val2로 입력
+	// 재미있는게 변수가 하나라면 나누지 않고 통째로 넣는다.
+
+	if (val1 < val2) {
+		for (int i = val1 + 1; i < val2; i++) { // for 안에서 변수 선언 가능
+			result += i;
+		}
+	}
+	else {
+		for (int i = val2 + 1; i < val1; i++) {
+			result += i;
+		}
+	}
+	std::cout << "두 수 사이의 정수 합: " << result << std::endl;
+	return 0;
+}
 ```
+
 
 ***
 # 2. 대주제
