Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -86,7 +86,34 @@ int main(void) {
 	return 0;
 }
 ```
+    
+## 1.4. 배열 기반의 문자열 입출력
 
+![cpp04](https://user-images.githubusercontent.com/50267433/74079533-1790ff00-4a7c-11ea-9d29-a54cd6fb02e2.PNG)
+
+**StringIO.cpp**
+```
+int main(void) {
+	char name[100]; // 자바와 달리 배열 크기선언이 변수 뒤에 정의되어있다.
+	char lang[100]; // 자바와 달리 배열 크기선언이 변수 뒤에 정의되어있다.
+
+	std::cout << "이름이 무엇입니까? ";
+	std::cin >> name;
+
+	std::cout << "좋아하는 프로그래밍 언어는 무엇인가요? ";
+	std::cin >> lang;
+
+	// 공백 기준으로 짜르기에 배열이여도 공백을 저장하지 않는다.
+	// 즉 a b 입력시 a는 name에 잘들어가지만 b 는 스택에 적재되어 
+	// 다음 cout일때 출력된다.
+	// 이는 기본 로직에 큰 영향을 줄 수 있는 논리 에러이므로 주의하자.
+
+	std::cout << "내이름은 "<< name << "입니다.\n";
+	std::cout << "제일 좋아하는 언어는  " << lang << "입니다." << std::endl;
+
+	return 0;
+}
+```
 
 ***
 # 2. 대주제
