Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -114,6 +114,35 @@ int main(void) {
 	return 0;
 }
 ```
+## 1.5. 문제  
+판매원들의 급여 계산 프로그램을 작성해보자.  
+이 회사는 모든 판매원에게 매달 50만원의 기본 급여와 물품 판매 가격의 12%에 해당되는 돈을 지급한다.  
+이를 기반으로 프로그래밍을 하되 -1이 입력되기 전까지 계속 입력되어야 한다.
+
+**문제 4**
+```
+int main(void) {
+
+	while (1) {	
+		const double DEFAULTSALARY = 50;
+		const double DEFAULTRATE = 0.12;
+		int saleAmount;
+		std::cout << "이번달 판매 금액(만원단위 숫자만 기입, -1일 경우 종료): ";
+		std::cin >> saleAmount;
+		if (saleAmount == -1) {
+			break;
+		}
+
+		double finalSalary = DEFAULTSALARY + (saleAmount * DEFAULTRATE);
+		std::cout <<"이번달 급여: " << finalSalary << "만원" << std::endl;
+	}
+	std::cout << "프로그램을 종료합니다.";
+	return 0;
+}
+```
+  
+![cpp05](https://user-images.githubusercontent.com/50267433/74079806-c97dfa80-4a7f-11ea-912e-828534988f26.PNG)
+  
 
 ***
 # 2. 대주제
