Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -145,8 +145,46 @@ int main(void) {
   
 
 ***
-# 2. 대주제
-> 인용
+# 2. 함수 오버로딩
+     
+![cpp06](https://user-images.githubusercontent.com/50267433/74079934-5d9c9180-4a81-11ea-9431-c2899cdb9992.PNG)     
+     
+![cpp07](https://user-images.githubusercontent.com/50267433/74079936-63927280-4a81-11ea-963e-575113e5aec1.PNG)     
+
+함수 오버로딩은 ```이름+매개변수(인자)```를 기준으로 하기에 매개변수의 자료형 및 개수에 따라 나뉘지만
+**반환형은 오버로딩의 기준이 되지 않기에 반환형이 다르다해서 오버로딩 되지는 않는다.**
+**FunctionOverloading.cpp** 
+```
+#include<iostream>
+// C언어는 단순 이름만으로 함수를 구별하기에 에러가 발생
+// C++은 이름+인자의 형태로 함수를 구별하기에 오버로딩이 성립
+
+int MyFunc(int num) {
+	num++;
+	return num;
+}
+int MyFunc(int a, int b) {
+	return a+b;
+}
+
+char MyFunc(char ch) {
+	return ch;
+}
+
+int main(void) {
+
+	int val1 = 10;
+	int val2 = 20;
+	char val3 = 'a';
+
+	std::cout << "첫번째 함수: " << MyFunc(val1) << std::endl;
+	std::cout << "두번째 함수: " << MyFunc(val1, val2) << std::endl;
+	std::cout << "세번째 함수: " << MyFunc(val3) << std::endl;
+
+	return 0;
+}
+```
+   
 ## 2.1. 소 주제
 ### 2.1.1. 내용1
 ```
