Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -185,6 +185,58 @@ int main(void) {
 	return 0;
 }
 ```
+
+**포인터 복습 및 오버로딩을 위한 문제**
+```
+#include<iostream>
+
+
+void MyFunc(char * ch1, char * ch2) {
+	char temp;
+	temp = *ch1;
+	*ch1 = *ch2;
+	*ch2 = temp;
+}
+
+void MyFunc(double* ch1, double* ch2) {
+	double temp;
+	temp = *ch1;
+	*ch1 = *ch2;
+	*ch2 = temp;
+}
+
+void MyFunc(int* ch1, int* ch2) {
+	int temp;
+	temp = *ch1;
+	*ch1 = *ch2;
+	*ch2 = temp;
+}
+
+int main(void) {
+
+	
+	char val1 = 'a';
+	char val2 = 'b';
+
+	double val3 = 1.0;
+	double val4 = 2.0;
+
+
+	int val5 = 10;
+	int val6 = 20;
+
+	MyFunc(&val1, &val2);
+	MyFunc(&val3, &val4);
+	MyFunc(&val5, &val6);
+
+
+	std::cout << "첫번째 함수: " << val1 << " " << val2 << std::endl;
+	std::cout << "첫번째 함수: " << val3 << " " << val4 << std::endl;
+	std::cout << "첫번째 함수: " << val5 << " "<< val6 << std::endl;
+
+	return 0;
+}
+```
    
 ## 2.1. 소 주제
 ### 2.1.1. 내용1
