--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -237,13 +237,31 @@ int main(void) {
 	return 0;
 }
 ```
-   
-## 2.1. 소 주제
-### 2.1.1. 내용1
-```
-내용1
-```   
 
+**여기서 잠깐**
+```
+void MyFunc(int* ch1, int* ch2) {
+	int temp;
+	temp = *ch1;
+	*ch1 = *ch2;
+	*ch2 = temp;
+}
+```
+대신에
+```
+void MyFunc(int* ch1, int* ch2) {
+	int * temp;
+	temp = ch1;
+	ch1 = ch2;
+	ch2 = temp;
+}
+```
+이거는 안되는 걸까?   
+  
+**결론부터 말하면 안된다.** 이유는 다음과 같다.
+  
+![pointer 혼동](https://user-images.githubusercontent.com/50267433/74080327-444a1400-4a86-11ea-922b-001ca60eb431.jpg)
+  
 ***
 # 3. 대주제
 > 인용
