Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -263,9 +263,68 @@ void MyFunc(int* ch1, int* ch2) {
 ![pointer 혼동](https://user-images.githubusercontent.com/50267433/74080327-444a1400-4a86-11ea-922b-001ca60eb431.jpg)
   
 ***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
+# 3. 매개변수의 디폴트 값
+매개변수에 값이 전달되지 않을 경우 기본으로 사용할 값을 지정해줄 수 있는데 이를 **디폴트 값**이라 한다.   
+    
+**DefaultVlaue1.cpp**
+```
+#include<iostream>
+
+int Adder(int num1 = 1, int num2 = 2) {
+	return num1 + num2;
+}
+
+int main(void){
+
+
+	std::cout << "첫번째 함수: " << Adder() << std::endl; 
+	// 첫번째 함수 : 3
+
+	std::cout << "두번째 함수: " << Adder(3) << std::endl;
+	// 두번째 함수 : 5
+	
+	std::cout << "세번째 함수: " << Adder(3,5) << std::endl;
+	// 세번째 함수 : 8
+
+	return 0;
+}
+```
+값을 입력할 경우 왼쪽부터 차례대로 입력값으로 대입해준다.    
+   
+**DefaultVlaue2.cpp**
+```
+#include<iostream>
+
+int Adder(int num1 = 1, int num2 = 2);
+
+int main(void){
+
+
+	std::cout << "첫번째 함수: " << Adder() << std::endl; 
+	// 첫번째 함수 : 3
+
+	std::cout << "두번째 함수: " << Adder(3) << std::endl;
+	// 두번째 함수 : 5
+	
+	std::cout << "세번째 함수: " << Adder(3,5) << std::endl;
+	// 세번째 함수 : 8
+
+	return 0;
+}
+
+int Adder(int num1, int num2) {
+	return num1 + num2;
+}
+```
+메소드 선언시에는 어떻게 할까?   
+프로그램은 순차적으로 진행이 되기에 메소드의 선언부를 읽고 main에서 알맞은 처리를 한다.    
+하지만 선언부에 매개변수에 관한 정보를 넣어주지 않는다면 main에서는 헷갈려서 알맞은 처리를 하지 못한다.     
+**즉, 디폴트값을 사용한다면 선언부에 기입해주는 것을 잊지말자.(선언 부분만 해도 된다는 뜻이기도 하다)**     
+  
+
+
+
+## 3.1.
 ### 3.1.1. 내용1
 ```
 내용1
