Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -265,7 +265,9 @@ void MyFunc(int* ch1, int* ch2) {
 ***
 # 3. 매개변수의 디폴트 값
 매개변수에 값이 전달되지 않을 경우 기본으로 사용할 값을 지정해줄 수 있는데 이를 **디폴트 값**이라 한다.   
-    
+
+## 3.1. 디폴트 값
+
 **DefaultVlaue1.cpp**
 ```
 #include<iostream>
@@ -290,6 +292,8 @@ int main(void){
 }
 ```
 값을 입력할 경우 왼쪽부터 차례대로 입력값으로 대입해준다.    
+   
+## 3.2. 선언부와 디폴트 값
    
 **DefaultVlaue2.cpp**
 ```
@@ -321,6 +325,19 @@ int Adder(int num1, int num2) {
 하지만 선언부에 매개변수에 관한 정보를 넣어주지 않는다면 main에서는 헷갈려서 알맞은 처리를 하지 못한다.     
 **즉, 디폴트값을 사용한다면 선언부에 기입해주는 것을 잊지말자.(선언 부분만 해도 된다는 뜻이기도 하다)**     
   
+## 3.3. 부분적 디폴트 값 설정
+    
+![cpp08](https://user-images.githubusercontent.com/50267433/74080587-cdfae100-4a88-11ea-8e93-23b373abd65d.PNG)   
+    
+부분적으로 디폴트 값을 설정해 줄 수 있다   
+여기서 주의할 점이   
+앞에 부분의 매개변수에 디폴트 값을 지정 안해도 되지만 
+뒤에 부분의 매개변수에  디폴트 값을 지정 하지 않음면 안된다.   
+  
+왜냐하면 매개변수로 주입했을 경우 무조건 매개변수의 순서대로 값이 주입되니
+```void func(int a = 1, int b, int c){}```이라도 b,c에 값이 들어가지 않고 a에 값이 들어간다.  
+이로인해 에러가 발생할 수 있으니 Compiler 에서는 애초에 에러메시지를 띄운다.  
+
 
 
 
