--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -338,10 +338,23 @@ int Adder(int num1, int num2) {
 ```void func(int a = 1, int b, int c){}```이라도 b,c에 값이 들어가지 않고 a에 값이 들어간다.    
 이로인해 에러가 발생할 수 있으니 Compiler 에서는 애초에 에러메시지를 띄운다.     
 
+## 3.4.문제   
+다음과 같은 형태로의 함수 오버로딩은 문제가 있다. 어떠한 문제가 있는지 설명해보자  
+```
+int SimpleFunc(int a = 10){
+	return a+1;
+}
 
+int SimpleFunc(void){
+	return 10;
+}
+```
+**이유**
+```
+오버로딩은 이름이 같은 함수가 있을때 매개변수로 무엇을 주느냐에 따라 어느것을 실행할지 컴퓨터가 알아서 처리해준다.  
+하지만 위 코드에서 SimpleFunc()로 실행했을 때 디폴트값 메소드를 사용할지 void 메소드를 사용할지 헷갈려진다.  
+```
 
-
-## 3.1.
 ### 3.1.1. 내용1
 ```
 내용1
