Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -354,8 +354,34 @@ int SimpleFunc(void){
 오버로딩은 이름이 같은 함수가 있을때 매개변수로 무엇을 주느냐에 따라 어느것을 실행할지 컴퓨터가 알아서 처리해준다.  
 하지만 위 코드에서 SimpleFunc()로 실행했을 때 디폴트값 메소드를 사용할지 void 메소드를 사용할지 헷갈려진다.  
 ```
-
-### 3.1.1. 내용1
+     
+***
+# 4. 인라인 함수
+## 4.1. 매크로 함수의 장점  
+매크로 함수의 대표적인 장점은 다음과 같다.  
 ```
-내용1
+일반적인 함수에 비해서 실행속도의 이점이 있다.  
+```
+반면, 매크로 함수의 단점은 다음과 같다.  
+```
+정의하기가 어렵다. 복잡한 함수를 매크로의 형태로 정의하는데 한계가 있다.  
+```
+**매크로 함수**
+```
+# include<iostream>
+# define SQUARE(X) ((X)*(X))
+
+int main(void){
+	std:cout << SQUARE(5) << std::endl;
+	return 0;
+}
+```
+```
+# include<iostream>
+# define SQUARE(X) ((X)*(X))
+
+int main(void){
+	std:cout << ((5)*(5)) << std::endl;
+	return 0;
+}
 ```
