Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -385,3 +385,10 @@ int main(void){
 	return 0;
 }
 ```
+위 예제와 같이 함수의 몸체부분이 함수호출 문장을 완전히 대체했을 때 **함수가 인라인화 되었다**라고 한다.
+   
+앞서 말했듯이 매크로 함수는 정의하는데 한계가 있다.  
+그렇기에 일반 함수처럼 정의가 가능했으면 좋겠다고 생각이 들었고  
+이를 토대로 만든 것이 **인라인 함수**이다.   
+   
+   
