--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -357,7 +357,7 @@ int SimpleFunc(void){
      
 ***
 # 4. 인라인 함수
-## 4.1. 매크로 함수의 장점  
+## 4.1. 매크로 함수
 매크로 함수의 대표적인 장점은 다음과 같다.  
 ```
 일반적인 함수에 비해서 실행속도의 이점이 있다.  
@@ -365,6 +365,7 @@ int SimpleFunc(void){
 반면, 매크로 함수의 단점은 다음과 같다.  
 ```
 정의하기가 어렵다. 복잡한 함수를 매크로의 형태로 정의하는데 한계가 있다.  
+또한 에러가 어디서 났는지를 명확히 보여주지 않아 디버깅이 힘들다.
 ```
 **매크로 함수**
 ```
@@ -391,4 +392,31 @@ int main(void){
 그렇기에 일반 함수처럼 정의가 가능했으면 좋겠다고 생각이 들었고  
 이를 토대로 만든 것이 **인라인 함수**이다.   
    
+## 4.2. 인라인 함수  
+
+**C++ 기반의 인라인 함수 예시**
+```
+#include<iostream>
+
+inline int SQUARE(int x) {
+	return x*x;
+}
+
+int main(void) {
+	
+	std::cout << SQUARE(5) << std::endl;
+	std::cout << SQUARE(12) << std::endl;
+	return 0;
+}
+```
+매크로는 선행처리기가 처리하지만 
+inline 키워드는 컴파일러에 의해 처리된다.  
+따라서 컴파일러는 함수의 인라인화가 오히려 성능의 해가 된다고 판단할 경우, 이 키워드를 무시하기도 한다.  
+또한 컴파일러는 필요한 경우 일반 함수를 임의로 인라인 처리하기도 한다.    
    
+**그렇다면 inline 함수가 매크로 함수를 완벽히 대체할 수 있나?**   
+그렇지 않다.   
+  
+매크로 함수 같은 경우는 자료형에 독립적이지만  
+inline 함수는 자료형에 독립적이지 않다 그렇기에 오버로딩을 진행 해주던가  
+템플릿(자바에서 제네릭)을 이용하여 자료형에 의한 독립 처리를 진행해주어야 한다  
