--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -409,14 +409,31 @@ int main(void) {
 	return 0;
 }
 ```
-매크로는 선행처리기가 처리하지만 
-inline 키워드는 컴파일러에 의해 처리된다.  
-따라서 컴파일러는 함수의 인라인화가 오히려 성능의 해가 된다고 판단할 경우, 이 키워드를 무시하기도 한다.  
-또한 컴파일러는 필요한 경우 일반 함수를 임의로 인라인 처리하기도 한다.    
+매크로는 선행처리기가 처리하지만  
+inline 키워드는 컴파일러에 의해 처리된다.    
+따라서 컴파일러는 함수의 인라인화가 오히려 성능의 해가 된다고 판단할 경우, 이 키워드를 무시하기도 한다.    
+또한 컴파일러는 필요한 경우 일반 함수를 임의로 인라인 처리하기도 한다.      
+     
+**그렇다면 inline 함수가 매크로 함수를 완벽히 대체할 수 있나?**     
+그렇지 않다.     
    
-**그렇다면 inline 함수가 매크로 함수를 완벽히 대체할 수 있나?**   
-그렇지 않다.   
+매크로 함수 같은 경우는 자료형에 독립적이지만     
+inline 함수는 자료형에 독립적이지 않다 그렇기에 오버로딩을 진행 해주던가    
+템플릿(자바에서 제네릭)을 이용하여 자료형에 의한 독립 처리를 진행해주어야 한다    
+       
+## 4.3. 인라인 함수는 필수인가?     
+여기는 내 주관적인 생각을 적어보려한다.    
+인라인 함수는 컴파일러가 인라인 요건에 적합하다 하면 인라인 처리를 진행하고   
+그렇지 않을 경우 인라인 처리를 진행하지 않는다.     
+즉 알아서 최적의 성능을 할 수 있게 처리해준다는 것인데 이는 잘 못 된 생각이다.         
+    
+우선 매크로를 사용하는 이유는 짧은 코드이지만 함수를 사용할 때 걸리는 복잡한 절차를 생략하기 위해서이다.    
+즉, 불필요한 과정을 거치지 않게 하기 위해서 사용하는 것인데 인라인도 마찬가지이다.     
+**코드의 양이 적을 때 인라인을 사용하는 것이 좋다**     
+     
+이유는 간단하다.     
+만약 코드의 양이 많다고 가정한다면 해당 코드들을 새로 작성하고 실행시키는 동작을 진행할 것이기 때문이다.    
+그렇기에 코드의 양이 많으면 함수를 한번 정의해 놓으면 해당 함수를 불러와서 사용하는 것이 좋기에         
+무조건적으로 인라인 함수를 써야한다는 생각은 버리도록 하자     
+
   
-매크로 함수 같은 경우는 자료형에 독립적이지만  
-inline 함수는 자료형에 독립적이지 않다 그렇기에 오버로딩을 진행 해주던가  
-템플릿(자바에서 제네릭)을 이용하여 자료형에 의한 독립 처리를 진행해주어야 한다  
