Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -481,11 +481,14 @@ int main(void) {
 
 ## 5.2. NameSpace 이름공간 선언부 사용시
 함수는 선언과 정의를 분리하는 것이 일반적이다.  
-그렇기에
-
+그렇기에 아래와 같은 구조로 작성을 한다.  
 ```
 Namespace 이름공간이름{
 	returnType function()
+}
+~~~~~~
+returnType 이름공간::function(){
+	method definition
 }
 ```
 ```
