Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -490,7 +490,13 @@ Namespace 이름공간이름{
 returnType 이름공간::function(){
 	method definition
 }
-```
+```  
+선언부에서는 기존과 똑같이 정의하면 되지만   
+정의부에서는 ```Namespace {}``` 키워드를 사용하지 않으므로 ```이름공간이름::```을 사용하고    
+반환형은 맨앞에 작성해준다.      
+즉, ```반환형 이름공간::함수이름(){}``` 이런식으로 작성한다.      
+    
+**예시**   
 ```
 # include <iostream>
 
@@ -514,7 +520,32 @@ void ProgComImpl::simpleFunc(void) {
 	std::cout << "ProgCom이 정의한 함수" << std::endl;
 }
 ```
-
+참고로 namespace를 나누어서 작성해도 되고
+```
+namespace BestComImpl {
+	void simpleFunc(void);
+}
+namespace BestComImpl {
+	void prettyFunc(void);
+}
+```
+같은 namespace 라면 해당 메소드내에서는 ```이름공간::```을 사용하지 않아도 된다.
+```
+namespace BestComImpl {
+	void simpleFunc(void);
+}
+namespace BestComImpl {
+	void prettyFunc(void);
+}
+~~~
+~~~
+~~~
+void BestComImpl::simpleFunc(void) 
+{
+	std::cout << "BestCom이 정의한 함수" << std::endl;
+	prettyFunc();
+}
+```
 
 
   
