Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -478,7 +478,7 @@ int main(void) {
 	ProgComImpl::simpleFunc();
 }
 ```
-
+    
 ## 5.2. NameSpace 이름공간 선언부 사용시
 함수는 선언과 정의를 분리하는 것이 일반적이다.  
 그렇기에 아래와 같은 구조로 작성을 한다.  
@@ -546,6 +546,27 @@ void BestComImpl::simpleFunc(void)
 	prettyFunc();
 }
 ```
-
+    
+## 5.3. 이름공간의 중첩     
+이름공간은 다른 이름공간 안에 삽입될 수 있다.    
+    
+```
+namespace parent{
+	int num=2;
+	namspace SubOne{
+		int num=3;
+	}
+	namspace SubTwo{
+		int num=4;
+	}
+}
+```
+총 3개의 num이 존재하는데, 각각 선언된 이름공간이 다르기 때문에 이름충돌 문제가 발생하지 않았다.    
+```
+std::cout<< Parent::num << std::endl;
+std::cout<< Parent::SubOne::num << std::endl;
+std::cout<< Parent::SubTwo::num << std::endl;
+```
+이렇게 프로세스가 처리된다면 2,3,4가 출력된다.    
 
   
