Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -546,7 +546,7 @@ void BestComImpl::simpleFunc(void)
 	prettyFunc();
 }
 ```
-    
+      
 ## 5.3. 이름공간의 중첩     
 이름공간은 다른 이름공간 안에 삽입될 수 있다.    
     
@@ -568,5 +568,9 @@ std::cout<< Parent::SubOne::num << std::endl;
 std::cout<< Parent::SubTwo::num << std::endl;
 ```
 이렇게 프로세스가 처리된다면 2,3,4가 출력된다.    
-
+      
+## 5.4. std::
+여태 나온 ```std::cout std::cin std::ednl```과 같이
+C++ 표준에서 제공하는 다양한 요소를 이름공간 std 안에 선언되어 있다.  
   
+## 5.5. using을 이용한 이름공간 
