Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -573,4 +573,54 @@ std::cout<< Parent::SubTwo::num << std::endl;
 여태 나온 ```std::cout std::cin std::ednl```과 같이
 C++ 표준에서 제공하는 다양한 요소를 이름공간 std 안에 선언되어 있다.  
   
-## 5.5. using을 이용한 이름공간 
+## 5.5. using을 이용한 이름공간의 명시      
+네임스페이스를 이용할 때 매번 ```이름공간::``` 붙여주는 것은 매우 번거롭고 귀찮은 일이다.   
+이것을 어느정도 완화 시켜 줄 수 있는 방법이 있는데 그것이 ```using```이다.  
+
+```
+using std::cin;
+using std::cout;
+using std::endl;
+```
+    
+using을 이용하면 해당 네임스페이스에 관해서는 ```이름공간::```을 생략할 수 있다.    
+(이는 자바의 import와 비슷한 원리라 생각을 하면된다.)    
+하지만 이를 남발할 경우 Namespace를 사용의 목적을 잃어버리고 이름의 충돌 확률이 높아질 수 있다.   
+
+**UsingDcl.cpp**
+```
+# include <iostream>
+
+using std::cin;
+using std::cout;
+using std::endl;
+
+int main(void) {
+	int num = 20;
+	cout << "Hello world!" << endl;
+	cout << "Hello "<<"world!" << endl;
+	cout << num << ' ' << 'A';
+	cout <<' '<<3.14<< endl;
+	return 0;
+}
+```
+만약 네임스페이스내의 모든 element에 대해서 생략을 진행하고 싶으면 아래와 같이 하면 된다.  
+```
+using namespace 이름공간이름;
+```
+
+**UsingDc2.cpp**
+```
+# include <iostream>
+
+using namespace std;
+
+int main(void) {
+	int num = 20;
+	cout << "Hello world!" << endl;
+	cout << "Hello "<<"world!" << endl;
+	cout << num << ' ' << 'A';
+	cout <<' '<<3.14<< endl;
+	return 0;
+}
+```
