Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -624,3 +624,12 @@ int main(void) {
 	return 0;
 }
 ```
+  
+## 5.6. 이름공간의 별칭 지정  
+이름공간이 중첩되면서까지 과도하게 사용되는 경우는 드물다.     
+하지만 이러한 상황이 발생할 경우 별칭을 사용해 축약할 수 있다.    
+   
+```
+```
+
+
