Update 01 C언어 기반의 C++.md

--- a/01 C언어 기반의 C++.md
+++ b/01 C언어 기반의 C++.md
@@ -626,10 +626,88 @@ int main(void) {
 ```
   
 ## 5.6. 이름공간의 별칭 지정  
-이름공간이 중첩되면서까지 과도하게 사용되는 경우는 드물다.     
-하지만 이러한 상황이 발생할 경우 별칭을 사용해 축약할 수 있다.    
+이름공간이 중첩되면서까지 과도하게 사용되는 경우는 드물다.        
+하지만 이러한 상황이 발생할 경우 별칭을 사용해 축약할 수 있다.       
    
+**구조**
 ```
+namespace AAA{
+	namespace BBB{
+		namespace CCC{
+			int num1;
+			int num2;
+		}
+	}
+}
 ```
+**기본 호출방법**
+```
+AAA::BBB::CCC::num1 = 20;
+AAA::BBB::CCC::num2 = 30;
+```
+**축약 호출방법**
+```
+namespace ABC = AAA::BBB::CCC;
+```
+**NameAlias.cpp**
+```
+# include <iostream>
+
+using namespace std;
+
+namespace AAA {
+	namespace BBB {
+		namespace CCC {
+			int num1;
+			int num2;
+		}
+	}
+}
+int main(void) {
+
+	AAA::BBB::CCC::num1 = 20;
+	AAA::BBB::CCC::num2 = 30;
+
+	namespace ABC = AAA::BBB::CCC;
+	cout << ABC::num1 << endl;
+	cout << ABC::num2 << endl; 
+	return 0;
+}
+```
+  
+## 5.7. 범위지정 연산자의 또다른 기능   
+전역변수가 존재하는데 같은 이름으로 지역변수를 사용하면 가리는 효과가 있다.  
+이러한 특징은 네임스페이스와 관련이 있다.  
+
+**예시**
+```
+int val=100;
+
+int SimpleFunc(void){
+	int val=20;
+	val+=3;
+}
+```
+위의 코드에서 보이듯이 ```SimpleFunc()```내에서    
+전역변수와 동일한 이름의 지역변수 val이 선언되었기 때문에 지역변수 val의 값을 3 증가시킨다.   
+  
+그렇다면 전역변수 val에 접근하려면 어떻게 해야할까? 이 때에 **범위지정 연산자를 사용하면 된다.**
+```
+int val=100;
+
+int SimpleFunc(void){
+	int val=20;
+	val+=3;
+	::val+=7;
+}
+```  
+전역변수도 사실은 네임스페이스에 종속되어 있는것인데 익명 네임스페이스에 존재하는 것이다.         
+그렇기에 ```::엘리먼트```를 사용해서 전역 변수에 접근할 수 있는것이다.     
+
+
+
+
+
+
 
 
