--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -4,16 +4,26 @@
 ## 1.1. C언어 복습
 ### 1.1.1. 키워드 const의 의미  
   
-* const int num=10;
-* const int * ptr1=&val1;
-* int * const ptr2=&val2;
-* const int * const ptr3=&val3;
-
-
-
+![cpp09](https://user-images.githubusercontent.com/50267433/74097305-e4b73b80-4b4d-11ea-84dc-c28971967921.PNG)  
+  
+* const int num=10; ```num 메모리를 상수로 지정```
+* const int * ptr1=&val1; ```ptr1이 가리키는 대상 즉, val1 값을 상수로 지정```
+* int * const ptr2=&val2; ```ptr2 자체를 상수로 지정 즉, 참조하는 대상을 바꿀 수 없다.```
+* const int * const ptr3=&val3; ```ptr3 자체를 상수로 지정 및 가리키는 대상도 상수로 지정```
+    
+### 1.1.2. 실행중인 프로그램의 메모리 공간
+실행중인 프로그램은 운영체제로부터 메모리 공간을 할당 받는데,  
+이는 크게 **데이터, 스탭, 힙 역역으로 나뉜다.**
 ```
-내용1
+data      : 글로벌 변수 (자동)
+stack     : 지역변수 및 매개변수 및 함수 (자동)
+heap      : 동적 할당 공간 (수동)
 ```
+   
+![cpp10](https://user-images.githubusercontent.com/50267433/74097308-f1d42a80-4b4d-11ea-8642-d0ac1e0b6f51.PNG)   
+       
+### 1.1.3. Call-by-value vs. Call-by-reference
+
 ## 1.2. 소 주제
 ### 1.2.1. 내용1
 ```
