Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -22,8 +22,13 @@ heap      : 동적 할당 공간 (수동)
    
 ![cpp10](https://user-images.githubusercontent.com/50267433/74097308-f1d42a80-4b4d-11ea-8642-d0ac1e0b6f51.PNG)   
        
-### 1.1.3. Call-by-value vs. Call-by-reference
-
+### 1.1.3. Call-by-value vs. Call-by-reference   
+함수의 호출형태는 크게 ```값에 의한 호출```과 ```참조에 의한 호출```로 나뉜다.   
+값에 의한 호출은 인자값을 단순히 복사하여 함수내에서 사용하는 것이고 
+참조에 의한 호출은 원본(주소)을 가져와 값을 변경 시키면 해당 원본에도 영향을 미치게 하는 것이다.  
+   
+![cpp11](https://user-images.githubusercontent.com/50267433/74097472-c18d8b80-4b4f-11ea-8df5-d45c9a76376b.PNG)   
+   
 ## 1.2. 소 주제
 ### 1.2.1. 내용1
 ```
