Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -22,14 +22,50 @@ heap      : 동적 할당 공간 (수동)
    
 ![cpp10](https://user-images.githubusercontent.com/50267433/74097308-f1d42a80-4b4d-11ea-8642-d0ac1e0b6f51.PNG)   
        
-### 1.1.3. Call-by-value vs. Call-by-reference   
-함수의 호출형태는 크게 ```값에 의한 호출```과 ```참조에 의한 호출```로 나뉜다.   
-값에 의한 호출은 인자값을 단순히 복사하여 함수내에서 사용하는 것이고 
-참조에 의한 호출은 원본(주소)을 가져와 값을 변경 시키면 해당 원본에도 영향을 미치게 하는 것이다.  
+### 1.1.3. Call-by-value vs. Call-by-reference       
+함수의 호출형태는 크게 ```값에 의한 호출```과 ```참조에 의한 호출```로 나뉜다.        
+값에 의한 호출은 인자값을 단순히 복사하여 함수내에서 사용하는 것이고       
+참조에 의한 호출은 원본(주소)을 가져와 값을 변경 시키면 해당 원본에도 영향을 미치게 하는 것이다.      
    
 ![cpp11](https://user-images.githubusercontent.com/50267433/74097472-c18d8b80-4b4f-11ea-8df5-d45c9a76376b.PNG)   
+     
+## 1.2. 새로운 자료형 bool (boolean)
+```우선 책이 오래되어서 새로운 자료형이라 칭하는 것 같다.(현재 해당 문서 작업년도는 2020년이다.)```  
+  
+기존 C언어에서는 true 와 false를 나타내는 자료형이 없기에 아래와 같은 형식을 취했다.    
+     
+* false : 0    
+* true  : 0 이외의 모든수 (그래도 대표적으로 1 사용)        
    
-## 1.2. 소 주제
+시간이 지나면서 true 나 false를 명확히 처리하는 자료형에 대한 필요성을 느끼게 되었고     
+C++에 들어오면서 bool 이라는 자료형을 새롭게 만들어 사용하게 되었다.  
+
+bool은 true/false 2가지의 값만 들어올 수 있는 자료형이다.   
+기존 전통을 존중하여 출력시 true 는 1이 출력되고 false 는 0이 출력된다.   
+```
+std::cout << 1        // 1
+std::cout << 0        // 0
+
+std::cout << true     // 1
+std::cout << false    // 0
+```
+   
+**하지만** true 는 1 false 는 0 이라는 뜻은 아니다.   
+실제 ```sizeof()```를 이용하여 확인 했을 경우 
+```
+std::cout << sizeof(1)           // 4
+std::cout << sizeof(0)           // 4
+
+std::cout << sizeof(true)        // 1
+std::cout << sizeof(false)       // 1
+```
+상수(숫자) 같은 경우 int가 기본형이기에 4가 출력되지만 bool형 같은 경우는 단순히 1이 출력된다.       
+이를 통해 true/false 는 1과0으로 출력될 수는 있지만 true !== 1, false !== 0 형태인 것을 알 수 있다.   
+
+
+
+
+
 ### 1.2.1. 내용1
 ```
 내용1
