--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -29,7 +29,11 @@ heap      : 동적 할당 공간 (수동)
    
 ![cpp11](https://user-images.githubusercontent.com/50267433/74097472-c18d8b80-4b4f-11ea-8df5-d45c9a76376b.PNG)   
      
-## 1.2. 새로운 자료형 bool (boolean)
+
+***
+# 2. 대주제
+## 2.1. bool (boolean) 소개
+
 ```우선 책이 오래되어서 새로운 자료형이라 칭하는 것 같다.(현재 해당 문서 작업년도는 2020년이다.)```  
   
 기존 C언어에서는 true 와 false를 나타내는 자료형이 없기에 아래와 같은 형식을 취했다.    
@@ -62,24 +66,25 @@ std::cout << sizeof(false)       // 1
 상수(숫자) 같은 경우 int가 기본형이기에 4가 출력되지만 bool형 같은 경우는 단순히 1이 출력된다.       
 이를 통해 true/false 는 1과0으로 출력될 수는 있지만 true !== 1, false !== 0 형태인 것을 알 수 있다.   
 
-
-
-
-
-### 1.2.1. 내용1
+**재미있는 형태**
 ```
-내용1
+int num1 = true // num1 = 1
+int num2 = false // num2 = 0
+int num3 = true+false // num3 = 1+0
 ```
-
-***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
+앞서 말햇듯이 true false 가 호출될 시에는 각각 1과 0으로 치환이 된다.   
+   
+## 2.2. bool (boolean) 자료형 선언  
+bool형 데이터는 새로운 자료형이다.     
+즉, int double과 마찬가지로 기본 자료형의 하나이며 자료형이 쓰이는 모든 곳에 사용할 수 있다.(변수,함수)     
+   
 ```
-내용1
+bool isTrueOne = true;
+bool isTrueTwo = false;
 ```   
-
+참고로 프로그래머들 사이에서의 암묵적인 규칙으로  
+해당 변수가 true/false를 가진다는 가독성을 높여주게끔 bool형 변수의 이름 앞에 ```is```를 붙인다.  
+  
 ***
 # 3. 대주제
 > 인용
