Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -31,7 +31,7 @@ heap      : 동적 할당 공간 (수동)
      
 
 ***
-# 2. 대주제
+# 2. 새로운 자료형 bool
 ## 2.1. bool (boolean) 소개
 
 ```우선 책이 오래되어서 새로운 자료형이라 칭하는 것 같다.(현재 해당 문서 작업년도는 2020년이다.)```  
