Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -86,9 +86,19 @@ bool isTrueTwo = false;
 해당 변수가 true/false를 가진다는 가독성을 높여주게끔 bool형 변수의 이름 앞에 ```is```를 붙인다.  
   
 ***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
+# 3. 참조자(reference)의 이해
+참조자는 성격상 포인터와 비유가 되기 쉽다.   
+하지만 비슷하기는 할 뿐 실제 동작은 다르다.
+## 3.1. 참조자의 이해
+변수는 **할당된 메모리 공간에 붙여진 이름이다.**     
+우리는 그 이름을 통해서 해당 메모리 공간에 접근이 가능한 것이다.    
+      
+```그렇다면 할당된 메모리 공간에 둘 이상의 이름을 부여할 수는 없을까?```   
+참조자는 이러한 개념에서 탄생된 것이다.    
+   
+즉, 참조자는 **할당된 메모리 공간에 둘 이상의 이름을 부여한 것이다.**
+
+
 ### 3.1.1. 내용1
 ```
 내용1
