--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -96,7 +96,90 @@ bool isTrueTwo = false;
 ```그렇다면 할당된 메모리 공간에 둘 이상의 이름을 부여할 수는 없을까?```   
 참조자는 이러한 개념에서 탄생된 것이다.    
    
-즉, 참조자는 **할당된 메모리 공간에 둘 이상의 이름을 부여한 것이다.**
+즉, 참조자는 **할당된 메모리 공간에 둘 이상의 이름을 부여한 것이다.**   
+(자신이 참조하는 변수를 대신할 수 있는 또 하나의 이름)     
+    
+**일반 값 할당**
+```
+int val1 = 10;
+int val2 = val1;
+```
+위와 같은 형태는 기존의 메모리를 이용하는 것이 아닌 새로 메모리를 할당 받아서 값을 넣는 것이다.   
+   
+**참조자**
+```
+int val1 = 10;
+int &val2 = val1;
+```
+참조자는 이러한 형태에서 ```&```만 넣어주면 된다.  
+이렇게 작성했을 경우 기존 메모리를 참조할 수 있는 이름이 하나 더 생긴 것이다.   
+   
+실제로 ``` val2++;```을 진행할 경우 ```val1``` 과 ```val2``` 모두 ```11```이 출력되는 것을 알 수 있고   
+```&val1 &val2```를 실행시킬 경우 같은 주소를 반환한다는 것을 알 수 있다.  
+    
+## 3.2. 참조자는 별칭이다.  
+C++에서는 참조자를 다음과 같이 설명하였다.  
+```
+변수에 별명을 하나 붙여주는 것입니다.   
+```
+이는 참조자에 대한 일반적인 설명에 해당하니, 참조자가 별칭에 비유된다는 사실도 알아 두자.   
+    
+## 3.3. 참조자의 수에는 제한이 없으며, 참조자를 대상으로도 참조자를 선언할 수 있다.  
+참조자의 수에는 제한이 없다.    
+즉, 여러개의 참조자를 선언하는 것도 가능하다.     
+   
+```
+int num = 2759;
+int &num2 = num;
+int &num3 = num2;
+int &num4 = num3;
+```
+이는 아래와도 같은 표현이다.
+```
+int num = 2759;
+int &num2 = num;
+int &num3 = num;
+int &num4 = num;
+```
+    
+## 3.4. 참조자의 선언 가능 범위
+참조자는 변수에 대해서만 선언이 가능하고, 선언됨과 동시에 누군가를 참조해야 한다.   
+
+```
+int &ref = 20;      (x)
+```
+```
+int &ref;           (x)
+```
+```
+int &ref = NULL;    (x)
+```
+그런데 여기서 말하는 '변수'의 범위는 배열의 각 요소도 포함된다.
+```
+int arr[3] = {1,3,5};
+int &ref1=arr[0];
+int &ref2=arr[1];
+int &ref3=arr[2];
+
+cout<<ref1<<endl;   // 1
+cout<<ref2<<endl;   // 3
+cout<<ref3<<endl;   // 5
+```
+또한 포인터 변수도 변수이기 때문에 참조자 선언이 가능하다.
+```
+int num = 12;
+int * ptr = &num;
+int ** dbptr = &ptr;
+
+int &ref = num;
+int * (&pref) = ptr;
+int ** (&dbpref) = dbptr;
+
+cout<<ref<<endl;   // 1
+cout<<*pref<<endl;   // 3
+cout<<**dbpref<<endl;   // 5
+```
+
 
 
 ### 3.1.1. 내용1
