Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -178,11 +178,29 @@ int ** (&dbpref) = dbptr;
 cout<<ref<<endl;   // 1
 cout<<*pref<<endl;   // 3
 cout<<**dbpref<<endl;   // 5
-```
+```  
+    
+***  
+# 4. 참조자(reference)와 함수  
+## 4.1. Call-by-value & Call-by-reference  
+기존 c언어에서 변수나 값을 넘겨주는 경우가 ```Call-by-value``` 였고   
+메모리 주소를 넘겨주는 경우가 ```Call-by-reference```였다.     
+     
+```Call-by-reference```는 외부에 선언된 변수에 접근하는 것이기에 이러한 이름이 붙여 사용했다.   
+
+C++에서는 아이러니 하게도 reference라는 이름을 뜻하는 참조자가 등장하였다.
+그리고 또한 이 참조자 역시도 매개변수나 반환형의 자료형으로 쓸수 가 있기 때문에   
+사실상 Memory address를 가져오는 c언어의 Call-by-reference 라는 개념은 그 의미가 애매해졌다.  
+(Call-by-address라고 하는 것이 어울릴 수 도 있다.)
+     
+하지만 기존 Call-by-reference가 의미하는 외부에 선언된 변수에 접근하는 것이기에    
+개념을 Call-by-reference를 2가지 방법으로 나타낼 수 있다고 정리를 하자.
+  
+1. 주소값
+2. 참조자
 
 
 
-### 3.1.1. 내용1
-```
-내용1
-```
+
+
+
