Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -247,20 +247,114 @@ void swap(int &a, int &b){
 위 두코드를 비교해보면 참조자는 포인터 연산자를 신경쓰지 않기에 더욱 효과가 좋아 보일 수 있다.     
     
 하지만 함수 호출 부분을 보면   
-기존 C언어에서는 ```Ref-by-Val``` 인지 ```Ref-by-Ref```인지 넘겨주는 인자만 보면 알 수 있었지만    
-C++에서는 참조자를 이용할 수 있기에 함수 내부에서 값을 어떻게 처리하는지 무조건 메소드를 확인해야 알 수 있게 되었다.   
-그렇기에 저렇게 값을 바꾸는 동작을 진행할 경우 pointer를 이용한 방법으로 가독성을 높이는게 좋을 수 있다.   
-     
+기존 C언어에서는 ```Ref-by-Val``` 인지 ```Ref-by-Ref```인지 넘겨주는 인자만 보면 알 수 있었지만       
+C++에서는 참조자를 이용할 수 있기에 함수 내부에서 값을 어떻게 처리하는지 무조건 메소드를 확인해야 알 수 있게 되었다.      
+그렇기에 저렇게 값을 바꾸는 동작을 진행할 경우 pointer를 이용한 방법으로 가독성을 높이는게 좋을 수 있다.        
+       
+### 4.2.1. 참조자 매개변수 & 참조자 리턴             
 ```
-int function(int &ref){
-  return ref;
+int main(void){
+
+  int num1 = 10;
+  int num2 = sampleFunction(num1);  // 새로운 메모리 할당해서 저장
+  int &num2 = sampleFunction(num1); // 기존 메모리에 참조자만 생성
+  
+  return 0;
 }
-int& function(int &ref){
+
+int& sampleFunction(int &ref){
   retunr ref;
 }
 ```
+### 4.2.2. 참조자 매개변수 & 일반 자료형 리턴             
+```
+int main(void){
 
+  int num1 = 10;
+  int num2 = sampleFunction(num1);  // 새로운 메모리 할당해서 저장
+  // int &num2 = sampleFunction(num1); // (X)
+  return 0;
+}
 
+int sampleFunction(int &ref){
+  return ref;
+}
+```
+위 같은 경우```int &num2 = sampleFunction(num1);```가 안되는 이유는     
+일반 자료형으로 반환을 하는것은 사실 **리터럴로 반환하기 때문이다.**      
+그렇기에 ```참조자 = 리터럴```이라는 공식은 **성립하지 않기 때문에 안된다.**   
+    
+### 4.2.3. 일반 자료형 매개변수 & 참조자 리턴          
+```
+int main(void){
 
+  int num1 = 10;
+  int num2 = sampleFunction(num1);
+  int &num2 = sampleFunction(num1);
+  return 0;
+}
 
+int& sampleFunction(int ref){
+  return ref;
+}
+```   
+원본 메모리 자체는 소멸하지만 참조자로 리턴을 한다해도     
+함수내의 지역 변수명은 사라질지라도 메모리를 리턴하므로 상관이 없다.     
+정확히는 메모리 생성을 외부에서 했기에 메모리는 계속 존재하므로 참조자로 받을 수 있는것이다.   
+(해당 메모리를 받쳐주는 매개변수는 사라질지라도 메모리는 존재하므로)     
+```int``` 반환하는 대상의 값(상수)을 반환하는 것이고 
+```int&``` 반환하는 대상의 메모리 대상을 반환하는 것이다. 
+ 
+### 4.2.4. 일반 자료형 매개변수 & 일반 자료형 리턴          
+```
+int main(void){
 
+  int num1 = 10;
+  int num2 = sampleFunction(num1);  
+  // int &num2 = sampleFunction(num1); // (X)
+  return 0;
+}
+
+int sampleFunction(int ref){
+  return ref;
+}
+```
+일반 자료형 return은 메모리가 아닌 값 즉, 상수를 리턴하므로 참조자로 받을 수 없다.  
+위와 같은 함수는 우리가 기존에 사용하던 함수이기에 이해가 쉬울 것이다.
+
+### 4.2.5. 지역변수 생성 후 일반형 return          
+```
+int main(void){
+
+  int num1 = 10;
+  int num2 = sampleFunction(num1);  
+  // int &num2 = sampleFunction(num1); // (X)
+  return 0;
+}
+
+int sampleFunction(int ref){
+  int num3 = 5;
+  return num3;
+}
+```
+앞서 말했듯이 참조자형 변수는 상수를 받을 수 없다.    
+   
+### 4.2.6. 지역변수 생성 후 참조자형 return (가장중요)         
+```
+int main(void){
+
+  int num1 = 10;
+  int num2 = sampleFunction(num1);  
+  int &num2 = sampleFunction(num1); // 하지만 사용하면 안된다.(X)
+  return 0;
+}
+
+int& sampleFunction(int ref){
+  int num3 = 5;
+  return num3;
+}
+```
+위와 같은 코드는 에러를 잃으키지 않다.    
+**하지만 에러를 일으키지 않기에 가장 위험한 코드이다.**  
+이유는 간단하다 메모리를 지역변수에서 생성했기에 해당 메모리는 지역변수에 존재한다.     
+즉, 함수가 끝나면 메모리도 사라지기에 외부에 있는 참조자는 결국 아무것도 참조하지 않게 된다.  
