Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -248,7 +248,7 @@ void swap(int &a, int &b){
     
 하지만 함수 호출 부분을 보면   
 기존 C언어에서는 ```Ref-by-Val``` 인지 ```Ref-by-Ref```인지 넘겨주는 인자만 보면 알 수 있었지만       
-C++에서는 참조자를 이용할 수 있기에 함수 내부에서 값을 어떻게 처리하는지 무조건 메소드를 확인해야 알 수 있게 되었다.      
+C++에서는 참조자가 존재하기에 함수 내부에서 값을 어떻게 처리하는지 무조건 메소드를 확인해야 알 수 있게 되었다.      
 그렇기에 저렇게 값을 바꾸는 동작을 진행할 경우 pointer를 이용한 방법으로 가독성을 높이는게 좋을 수 있다.        
        
 ### 4.2.1. 참조자 매개변수 & 참조자 리턴             
