Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -358,3 +358,43 @@ int& sampleFunction(int ref){
 **하지만 에러를 일으키지 않기에 가장 위험한 코드이다.**  
 이유는 간단하다 메모리를 지역변수에서 생성했기에 해당 메모리는 지역변수에 존재한다.     
 즉, 함수가 끝나면 메모리도 사라지기에 외부에 있는 참조자는 결국 아무것도 참조하지 않게 된다.  
+   
+## 4.3. 참조자를 이용한 Call-by-reference의 황당함과 const 참조자   
+참조자는 말그대로 '참조'를 하기 위해서 존재하는 것이다.  
+즉, 값을 바꾸거나 조작하기 위해 존재하는 것이 아닌 단순 호출만을 위한 것이다.   
+  
+const 변수에 참조자를 이용할 경우 값 변경이나 조작의 위험에 빠질 가능성이 크다.  
+```
+const int num1= 1;
+int& num2 = num1;
+num2 += 3;
+std::cout<<num1<<std::endl;   // 4
+std::cout<<num2<<std::endl;   // 4
+```
+이를 방지하고자 우리는 참조자에게도 ```const``` 선언을 해줄 필요가 있다.   
+그리고 물론 이는 **매개변수에서도 사용가능하다.**
+```
+const int num1= 1;
+const int& num2 = num1;
+std::cout<<num1<<std::endl;   // 1
+std::cout<<num2<<std::endl;   // 1
+```   
+   
+**const 참조자**에는 재미있는 기능이 하나 더 있는데 바로 **상수도 받을 수 있다는 것이다.**  
+```
+const int& val1 = 30;
+```
+이유는 원래 상수 자체도 메모리에 일시적으로 저장이 되었다 바로 사라지는데      
+상수를 const로 지정을 해두었기에 값이 메모리에 임시적으로 계속 존재하게 되므로 참조자를 사용할 수 있다.    
+     
+그리고 이러한 원리는 함수의 매개변수에서 유용하게 쓰일 수 있는데
+매개변수에 ```const 참조자``` 를 사용하게 되면 변수 뿐만 아니라 상수도 인자 값으로 받을 수 있다.  
+```
+int Adder(const int &num1, const int &num2)
+{
+  return num1+num2;
+}
+```
+
+
+
