--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -402,13 +402,38 @@ int Adder(const int &num1, const int &num2)
 **MemberMalFree.cpp**
 ```
 #include <iostream>
-#include <string.h>
-#include <stdlib.h>
+#include<string.h>
+#include<stdlib.h>
 
+using namespace std;
 
+char * MakeStrAdr(int len) {
+	char* str = (char*)malloc(sizeof(char) * len);
+	return str;
+}
 
-
+int main(void) {
+	char* str = MakeStrAdr(20);
+	strcpy(str, "I am so happy~");
+	cout << str << endl;
+	free(str);
+	return 0;
+}
+```  
+위 예제는 C언어에서의 동적할당을 보이기 위한 것이다.      
+그런데 이 방법에는 다음의 두가지 불편한점이 따른다.     
+      
+* 할당할 대상의 정보를 무조건 바이트 크기단위로 전달해야 한다.     
+* 반환형이 void형 포인터이기 때문에 적절한 형 변환을 거쳐야 한다.   
+  
+그런데 C++에서는 ```new & delete```키워드를 제공해주고 이러한 불편함을 해결해주었다.   
 ```
+int형 변수의 할당 : int * ptr1 = new int;
+double형 변수의 할당 : double * ptr2 = new double;
+길이가 3인 int형 배열의 할당 : int * arr1 = new int[3];
+길이가 7인 double형 배열의 할당 : double * arr2 = new double[7];
+```
+
 
 
 
