Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -433,6 +433,15 @@ double형 변수의 할당 : double * ptr2 = new double;
 길이가 3인 int형 배열의 할당 : int * arr1 = new int[3];
 길이가 7인 double형 배열의 할당 : double * arr2 = new double[7];
 ```
+```
+앞서 할당한 int형 변수의 소멸 : delete ptr1;
+앞서 할당한 double형 변수의 소멸 : delete ptr2;
+앞서 할당한 int형 배열의 소멸 : delete []arr1;
+앞서 할당한 double형 배열의 소멸 : delete []arr2;
+```
+정리하면 ```new 자료형``` 또는 ```new 자료형[크기]```를 이용하여 동적 메모리를 할당해주고     
+new 연산시 반환된 주소값을 대상으로 delete 연산을 진행하되, 배열일 경우 ```[]```를 추가로 명시해주기만 하면 된다.    
+
 
 
 
