Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -439,10 +439,87 @@ double형 변수의 할당 : double * ptr2 = new double;
 앞서 할당한 int형 배열의 소멸 : delete []arr1;
 앞서 할당한 double형 배열의 소멸 : delete []arr2;
 ```
-정리하면 ```new 자료형``` 또는 ```new 자료형[크기]```를 이용하여 동적 메모리를 할당해주고     
-new 연산시 반환된 주소값을 대상으로 delete 연산을 진행하되, 배열일 경우 ```[]```를 추가로 명시해주기만 하면 된다.    
+정리하면 ```new 자료형``` 또는 ```new 자료형[크기]```를 이용하여 동적 메모리를 할당해주고        
+new 연산시 반환된 주소값을 대상으로 delete 연산을 진행하되, 배열일 경우 ```[]```를 추가로 명시해주기만 하면 된다.       
+     
+**NewDelete.cpp**
+```
+#include <iostream>
+#include<string.h>
 
+using namespace std;
 
+char * MakeStrAdr(int len) {
+	//char* str = (char*)malloc(sizeof(char) * len);
+	char* str = new char[len];
+	return str;
+}
 
-
+int main(void) {
+	char* str = MakeStrAdr(20);
+	strcpy(str, "I am so happy~");
+	cout << str << endl;
+	delete []str;
+	return 0;
+}
+```
+   
+new 와 delete는 malloc & free를 대한해주는 방법이다.     
+하지만 malloc & free와 같다고 보면은 절대 안되고 아에 별개의 동작 방식이라 생각하자.     
+참고로 클래스에서 객체 생성시에 new 는 생성자함수를 호출하지만 malloc은 그렇지 않다.    
+     
+## 5.2. 힙에 할당된 변수? 이제 포인터를 사용하지 않아도 접근할 수 있어요     
+참조자의 선언은 상수가 아닌 변수를 대상으로만 가능함을 알고 있을 것이다.(const 아닌경우)       
+**그렇다면 new 연산자를 이용해서 할당된 메모리 공간에도 참조자의 선언이 가능할까?**     
+         
+C++ 에서는 new 연산자를 이용해서 할당된 메모리 공간도 변수로 간주하여, 참조자의 선언이 가능하도록 하고 있다.  
+  
+```
+int * ptr = new int;
+int & ref = *ptr;
+ref = 20;
+cout<<*ptr<<endl;
+```
+이렇듯 동적변수도, 포인터 변수도 참조자를 이용하여 일반 일반 변수처럼 힙 영역에 접근 할 수 있다.     
+(+1 참조자를 사용하는 이유가 추가 되었습니다)       
+          
+***  
+# 6. C++에서 C언어의 표준함수 호출하기  
+## 6.1. C를 더하고 .h를 빼라  
+C언어의 라이브러리에는 매우 다양한 유형의 함수들이 정의되어 있다.  
+그런데 이러한 함수들은 C++의 표준 라이브러리에도 포함되어 있다.   
+```
+#include<stdio.h>	->	#include<cstdio>
+#include<stdlib.h>	->	#include<cstdlib>
+#include<math.h>	->	#include<cmath>
+#include<string.h>	->	#include<cstring>
+```    
+헤더파일의 확장자인 ```.h```를 생략하고 앞에 ```c```를 붙이면 C언어 대응하는 C++의 헤더파일 이름이 된다.   
+   
+## 6.2. C++의 헤더를 선언하는 이유
+C++ 관점에서, 여전히 ```.h```를 붙여도 사용가능한 이유는 구버전과의 호환성을 제공하기 위함이다.  
+그리고 C++ 표준 라이브러리 함수들과 C 표준 라이브러리가 완벽히 일치하지 않기 때문이기도 한다.  
+  
+그렇다면 C++ 라이브러리를 사용하는 이유는 또 무엇일까? 어떤점이 개선되었을까?   
+C++에서는 오버로딩의 개념이 도입되었다.  
+즉, 같은 이름을 가진 메소드들이 다양한 프로세스를 처리할 수 있게끔 만들어졌다.   
+   
+**C언어**
+```
+int abs(int num);
+double dabs(double num);
+```
+기존에 만들어졌던 메소드에서 다른 자료형을 표현하고 싶으면 메소드의 이름을 변경해주어야 했다.     
+이는 개발자들에게 있어 같은 기능을 처리하더라도 여러 메소드를 알 고 있어야 한다는 부담감을 줄 수 밖에 없다.     
+     
+**C++**
+```
+long abs(long num);
+float abs(float num);
+double abs(double num);
+long double abs(long double num);
+```
+C++에서는 함수 오버로딩이 가능하기 때문에 사용하기가 더욱 편해졌다.   
+이렇듯 C++ 라이브러리는 C++ 문법을 기반으로 개선된 형태로 구성되어 있으며  
+우리는 이러한 C++ 라이브러리를 가급적 이용하는 것이 훨씬 좋다.   
 
