--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -1,8 +1,30 @@
 03 클래스의 기본
 =======================
-# 1. 대 주제
-> 인용
-## 1.1. 소 주제
+# 1. C++에서의 구조체
+클래스의 탄생은 간단하다. 
+기존 함수는 전역이다.  
+전역은 누구나 호출할 수 있는 것으로 모든 데이터에 사용하지 않음에도 사용 가능한 문제점이 발생할 수 있다.     
+그렇기에 구조체에 함수를 넣어서 잘못된 접근을 최소화 시키거나 미연에 방지시킬 수 있다. 
+      
+**구조체의 등장 배경**   
+      
+* 연관 있는 데이터를 하나로 묶으면 프로그램의 구현 및 관리가 용이하다.     
+* 구조체는 연관 있는 데이터를 하나로 묶는 문법적 장치이다.        
+         
+연관있는 데이터들은 생성 및 소멸의 시점이 일치하고,     
+이동 및 전달의 시점 및 방법이 일치하기 때문에 하나의 자료형으로 묶어서 관리하는 것이 용이하다.    
+
+## 1.1. C++ 에서의 구조체 변수 선언    
+**C 스타일 구조체 변수 초기화**
+```
+struct Car basicCar;
+struct Car simpleCar;
+```
+**C++ 스타일 구조체 변수 초기화**
+```
+Car basicCar;
+Car simpleCar;
+```
 ### 1.1.1. 내용1
 ```
 내용1
