--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -25,6 +25,53 @@ struct Car simpleCar;
 Car basicCar;
 Car simpleCar;
 ```
+기존 C에서 struct 키워드의 생략을 위한 typedef선언이 불필요하다.     
+클래스는 데이터 뿐만 아니라, 해당 데이터와 연관된 함수들도 함께 그룹을 형성하기 때문에       
+함수도 하나로 묶는 것에 대해 나름의 가치를 부여할 수 있다.       
+   
+**클래스 만들기**
+```
+struct Car
+{
+      char ganerID[ID_LEN]
+      int fuelGauge;
+      int curSpeed;
+
+      void ShowCarState()
+      {
+            cout<<"소유자ID: "<<ganerID<<endl;
+            cout<<"연료량: "<<fuelGauge<<"%"<<endl;
+            cout<<"현재속도: "<<curSpeed<<"km/s"<<endl;
+      }
+      void Break()
+      {
+       if(curSpeed < BRK_STEP)
+       {
+            curSpeed=0;
+            return;
+       }
+       curSpeed -= BRK_STEP;
+      }
+      void Accel()
+      {
+       if(fuelGauge <= 0){
+            return;
+       } else{
+            fuelGauge=FUEL_STEP;
+       }
+       
+       if(curSpeed+ACC_STEP >=MAX_SPD){
+            curSpeed=MAX_SPD;
+            return;
+       }
+       curSpeed += ACC_STEP;
+      }
+}
+```
+C++에서는 구조체 안에 함수를 삽입하는 것이 가능하다.   
+따라서 C++에서는 구조체가 아닌, 클래스라 한다.     
+동일한 클래스내에서 존재하는 변수와 함수는 직접 접근할 수 있다.     
+
 ### 1.1.1. 내용1
 ```
 내용1
