--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -25,10 +25,10 @@ struct Car simpleCar;
 Car basicCar;
 Car simpleCar;
 ```
-기존 C에서 struct 키워드의 생략을 위한 typedef선언이 불필요하다.     
-클래스는 데이터 뿐만 아니라, 해당 데이터와 연관된 함수들도 함께 그룹을 형성하기 때문에       
-함수도 하나로 묶는 것에 대해 나름의 가치를 부여할 수 있다.       
-   
+기존 C에서 struct 키워드의 생략을 위한 typedef선언이 불필요하다.      
+클래스는 데이터 뿐만 아니라, 해당 데이터와 연관된 함수들도 함께 그룹을 형성하기 때문에         
+함수도 하나로 묶는 것에 대해 나름의 가치를 부여할 수 있다.          
+       
 **클래스 만들기**
 ```
 struct Car
@@ -71,7 +71,14 @@ struct Car
 C++에서는 구조체 안에 함수를 삽입하는 것이 가능하다.   
 따라서 C++에서는 구조체가 아닌, 클래스라 한다.     
 동일한 클래스내에서 존재하는 변수와 함수는 직접 접근할 수 있다.     
-
+    
+**클래스 변수 선언하기(객체 생성하기)**    
+```
+Car run99 = {"run99", 100, 0}
+Car sped77 = {"sped77", 100, 0}
+```
+이와 같이 변수에 대한 값만 할당했더라도 해당 클래스에는 함수도 존재한다고 생각하자.      
+  
 ### 1.1.1. 내용1
 ```
 내용1
