--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -79,11 +79,56 @@ Car sped77 = {"sped77", 100, 0}
 ```
 이와 같이 변수에 대한 값만 할당했더라도 해당 클래스에는 함수도 존재한다고 생각하자.      
   
-### 1.1.1. 내용1
+## 1.2. 구조체 안에 enum 상수의 선언   
+상수들 중에도 특정 클래스에게만 의미있는 상수들이 있을 수 있다.   
+즉, 다른 영역에서 사용하도록 정외된 상수가 아니니, 이들 상수도 구조체 내에 포함시키는 것이 좋을 수 있다.  
+따라서 이러한 경우에는 열거형 ```enum```을 이용해서 구조체 내에서만 유효한 상수를 정의하면 된다.   
+  
+**enum 상수**
 ```
-내용1
+struct Car
+{
+      enum
+      {
+            ID_LEN = 20,
+            MAX_SPD = 200,
+            FUEL_STEP = 2,
+            ACC_STEP = 10,
+            BRK_STEP = 10,
+      }
+      
+      char gameID[ID_LEN];
+      int fuelGauge;
+      int curSpeed;
+      
+      void ShowCarState() {.....}
+      void Accel() {.....}
+      void Break() {.....}
+}
 ```
-## 1.2. 소 주제
+열거형은 하나의 메모리룰 공유하는 값들을 지정해주는 것이다.   
+즉, 4bye 메모리를 여러 변수, 상수들이 공통으로 사용하는 것이다.   
+  
+참고로 enum의 선언을 구조체 내부에 삽입하는 것이 부담스럽다면,  
+이름공간을 이용해서 상수가 사용되는 영역을 명시하는 것도 또 다른 방법이 될 수 있다.  
+(이름 공간을 이용하면 한개가 아닌 몇몇의 구조체 사이에서만 사용하는 상수 선언시 도움이 된다.)   
+
+```
+namespace CAR_CONST
+{
+      enum
+      {
+            ID_LEN      = 20;
+            MAX_SPD      = 200;
+            FUEL_STEP      = 2;
+            ACC_STEP      = 10;
+            BRK_STEP      = 10;
+      }
+}
+```
+
+
+
 ### 1.2.1. 내용1
 ```
 내용1
