Update 03 클래스의 기본.md

--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -126,18 +126,82 @@ namespace CAR_CONST
       }
 }
 ```
-
-
-
-### 1.2.1. 내용1
+   
+## 1.3. 함수는 외부로 뺄 수 있다.     
+**클래스 안**
 ```
-내용1
+struct Cat
+{     
+      .     .    .      .
+      void ShowCarState();
+      void Accel();
+      .     .     .     .     
+}
 ```
+**클래스 밖**
+```
+.     .     .     .     .     .     .     
 
+void Car::ShowCarState()
+{
+      .     .     .     .           
+}
+
+void Car::Accel()
+{
+      .     .     .     .           
+}
+```
+위 코드는    
+1. 구조체 안에서 함수를 **선언**  
+2. 구조체 밖에서 구조체 안에 선언된 함수를 **정의** 한것이다.    
+  
+**inline과 구조체 함수**
+```
+inline void Car::ShowCarState(){.   .     .     .     .}
+inline void Car::Accel(){.   .     .     .     .}
+inline void Car::Break(){.   .     .     .     .}
+```
+구조체 안에 정의된 함수는 inline 선언된 것으로 간주한다.       
+따라서 필요하다면, 함수의 정의를 외부로 뺄 때에는 위와 같이 명시적으로 inline 선언을 해야한다.      
+   
 ***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
+# 2. 클래스와 객체
+## 2.1. 클래스와 구조체의 유일한 차이 (생성자)   
+키워드 struct를 대신해서 class를 사용하면, 구조체가 아닌 클래스가 된다.   
+그런데 이렇게 키워드를 바꿔놓으면 앞서 보여주었던 다음의 방식으로 변수를 선언하지 못한다.   
+   
+**외부 접근 불가**
+```
+Car run99;
+strcpy(run99.gamerID,"run99"); (x) 외부 접근 불가
+run99.fuelGauge = 100; (x) 외부 접근 불가
+run99.curSpeed = 0; (x) 외부 접근 불가
+```
+
+**변수 생성**
+```
+Car run99={"rung99", 100, 0} (x) 따지고 들면 외부에서 변수를 초기화 하려 했기 때문이다.
+```
+클래스는 기본적으로 클래스 내에 선언된 변수는 클래스 내에 선언된 함수에서만 접근이 가능하다.
+```
+접근과 관련해서 별도의 선언을 하지 않으면, 
+클래스 내에 선언된 변수 및 함수에 대한 접근을 허용하지 않을 테니, 접근과 관련된 지시를 별도로 내려줘   
+```
+이렇듯 클래스는 정의를 하는 과정에서 각각의 변수 및 함수의 접근 허용범위를 별도로 선언해야 한다.        
+그리고 이것이 클래스와 구조체의 차이점이다.     
+  
+## 2.2. 접근제어 지시자(접근제어 레이블)   
+C++의 접근제어 지시자는 3가지가 존재한다.       
+    
+* public : 어디서든 접근 허용     
+* protected : 상속관계에 놓여있을 때, 유도 클래스에서의 접근 허용    
+* private : 클래스 내(클래스 내에 정의된 함수)에서만 접근 허용   
+
+  
+**그렇다면 어떻게 초기화 해주어야 하나요?** 
+
+
 ### 2.1.1. 내용1
 ```
 내용1
