Update 03 클래스의 기본.md

--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -231,7 +231,61 @@ run99.Break();
 run99.ShowCarState();
 return 0;
 ```
-Car 멤버함수는 모두 public이므로 클래스의 외부에 해당하는 main 함수에서 접근 가능!
+Car 멤버함수는 모두 public 이므로 클래스의 외부에 해당하는 main 함수에서 접근 가능!!!  
+  
+## 2.3. 용어 정리
+```
+class Car
+{
+private: 
+      char gamerID[CAR_CONST::ID_LEN];
+      int fuelGauge;
+      int curSpeed;
+}
+public:
+      void InitMembers(char * ID, int fuel);
+      void ShowCarState();
+      void Accel();
+      void Break();
+```          
+      
+객체 : 클래스를 대상으로 생성된 변수      
+멤버 변수 : 클래스 내에 선언된 변수        
+멤버 함수 : 클래스 내에 정의된 함수      
+     
+참고로 struct 키워드를 이용한 것도 클래스라 칭한다.       
+즉, struct 키워드나 class 키워드로 만들어진 대상을 클래스라 한다.       
+     
+## 2.4. C++ 에서의 파일 분할      
+이미 C언어 에서는 함수의 선언을 h파일(헤더 파일)에 넣고 함수의 정의를 c파일에 넣는다.
+**Car.h**
+```
+class Car
+{
+private: 
+      char gamerID[CAR_CONST::ID_LEN];
+      int fuelGauge;
+      int curSpeed;
+}
+public:
+      void InitMembers(char * ID, int fuel);
+      void ShowCarState();
+      void Accel();
+      void Break();
+```
+**Car.c**
+```
+void Car::InitMembers(char * ID, int fuel){. . . . }
+void Car::ShowCarState(){. . . .}
+void Car::Accel(){. . . .}
+void Car::Break(){. . . .}
+```
+
+
+
+
+
+
 ### 2.1.1. 내용1
 ```
 내용1
