--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -257,8 +257,17 @@ public:
 즉, struct 키워드나 class 키워드로 만들어진 대상을 클래스라 한다.       
      
 ## 2.4. C++ 에서의 파일 분할      
-이미 C언어 에서는 함수의 선언을 h파일(헤더 파일)에 넣고 함수의 정의를 c파일에 넣는다.
-**Car.h**
+이미 C언어 에서는 함수의 선언을 h파일(헤더 파일)에 넣고 함수의 정의를 c파일에 넣는다.      
+우선 이렇게 h파일과 c파일로 분할을 하는 이유는      
+일반적으로 소스코드의 재사용성을 높이기 위해서 사용되며           
+유지보수 관리 측면에서도 편리하다는 장점이 있습니다.         
+       
+또한 함수를 호출하여 컴파일 할 때 필요한 것은 함수의 정의가 아닌 함수의 선언을 통해 오류를 판단한다.        
+물론 전체 코드를 정의해서 이용할 수 있지만 그러기에는 불필요하게 소스코드를 사용하는 것이고       
+우리는 단지 링크 과정을 통해 하나의 바이너리로 구성만 시켜주면 되기 때문이다.      
+      
+물론 이외에도 ```#ifndef```,```#define```,```#endif```와 같이 중복을 방지하는 구문도 있기 때문이다.      
+**Car.h**  
 ```
 class Car
 {
@@ -280,17 +289,27 @@ void Car::ShowCarState(){. . . .}
 void Car::Accel(){. . . .}
 void Car::Break(){. . . .}
 ```
-
-
-
-
-
-
-### 2.1.1. 내용1
+    
+단, inline 함수는 컴파일 과정에서 함수의 호출문을 대체해야 하기 때문에 헤더파일에 함께 정의되어야 한다.        
+   
+**Car.h**  
 ```
-내용1
-```   
-
+class Car
+{
+private: 
+      char gamerID[CAR_CONST::ID_LEN];
+      int fuelGauge;
+      int curSpeed;
+}
+public:
+      void InitMembers(char * ID, int fuel){. . . . };
+      void ShowCarState(){. . . . };
+      void Accel(){. . . . };
+      void Break(){. . . . };
+```  
+   
+이부분은 이해가 조금 안되니 나중에 다시보도록 하자   
+   
 ***
 # 3. 대주제
 > 인용
