Update 03 클래스의 기본.md

--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -311,10 +311,117 @@ public:
 이부분은 이해가 조금 안되니 나중에 다시보도록 하자   
    
 ***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
-### 3.1.1. 내용1
+# 3. 객체지향 프로그래밍의 이해
+**왜 객체라는 용어를 사용할까?**   
+현실세계에 존재하는 모델(객체)을 그대로 프로그래밍으로 옮기는 것이기에 객체지향 프로그램이라 한다.    
+
+**객체에 대한 간단한 정의**
 ```
-내용1
+사전적 의미 : 물건 또는 대상
+객체지향 프로그래밍 : 객체 중심의 프로그래밍
+```
+```
+나는 과일장수에게 2개의 사과를 구매했다.  
+  
+나 : 객체
+과일장수 : 객체
+2개 : 데이터
+사과 : 객체
+구매했다. 기능/행위
+```
+## 3.1. 과일 장사
+### 3.1.1. 과일장수의 정의와 멤버변수의 상수화**
+**FruitSeller.h**
+```
+#pragma once
+#ifndef __FRUITSELLER_H__
+#define __FRUITSELLER_H__
+#endif
+
+using namespace std;
+class FruitSeller
+{
+private:
+	int APPLE_PRICE;
+	int numOfApples;
+	int myMoney;
+public:
+	int SaleApples(int money);
+	void InitMembers(int price, int num, int money);
+	void ShowSalesResult();
+};
+```
+과일값은 변하지 않는다고 가정할 때 상수라고 의미해주게 변수 이름을 대문자로 작성하는 것이 좋다.     
+그런데 기존에 상수로 처리하려면 const 키워드를 사용했는데 클래스에서는 사용하면 좋지 않다.      
+왜냐하면 클래스내에서 변수를 선언했을시 바로 초기화를 진행 못하며 ```const int num1 = 10; (X) 불가```        
+또한 ```const int num1;```선언시에 랜덤값이 상수로 지정되어 값을 변경도 할 수 없기 때문이다.      
+그렇기에 const 선언을 해주지 않고 대신에 변수명을 대문자로 상수임을 나타내주자    
+**FruitSeller.cpp**
+```
+#include "FruitSeller.h"
+#include <iostream>
+
+int FruitSeller::SaleApples(int money)
+{
+	int num = money / APPLE_PRICE;
+	numOfApples -= num;
+	myMoney += money;
+	return num;
+}
+
+void FruitSeller::InitMembers(int price, int num, int money)
+{
+	APPLE_PRICE = price;
+	numOfApples = num;
+	myMoney = money;
+}
+
+void FruitSeller::ShowSalesResult()
+{
+	cout << "남은 사과: " << numOfApples << endl;
+	cout << "판매 수익: " << myMoney << endl;
+}
+```
+
+### 3.1.1. 과일 구매자 '나'의 정의와 멤버변수의 상수화**
+**FruitBuyer.h**
+```
+#pragma once
+#include "FruitSeller.h"
+#ifndef __FRUITBUYER_H__
+#define __FRUITBUYER_H__
+#endif
+
+class FruitBuyer
+{
+	int myMoney;
+	int numOfApples;
+
+public:
+	void InitMember(int money);
+	void BuyApples(FruitSeller& seller, int money);
+	void ShowBuyResult();
+};
+```
+**FruitBuyer.cpp**
+```
+#include "FruitBuyer.h"
+#include <iostream>
+
+using namespace std;
+
+void FruitBuyer::InitMember(int money)
+{
+	myMoney = money;
+	numOfApples = 0;
+}
+void FruitBuyer::BuyApples(FruitSeller& seller, int money)
+{
+	numOfApples += seller.SaleApples(money);
+}
+void FruitBuyer::ShowBuyResult()
+{
+	cout << "현재 잔액:" << myMoney << endl;
+	cout << "사과 개수:" << numOfApples << endl;
+}
 ```
