Update 03 클래스의 기본.md

--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -383,7 +383,7 @@ void FruitSeller::ShowSalesResult()
 }
 ```
 
-### 3.1.1. 과일 구매자 '나'의 정의와 멤버변수의 상수화**
+### 3.1.2. 과일 구매자 '나'의 정의와 멤버변수의 상수화**
 **FruitBuyer.h**
 ```
 #pragma once
@@ -423,5 +423,29 @@ void FruitBuyer::ShowBuyResult()
 {
 	cout << "현재 잔액:" << myMoney << endl;
 	cout << "사과 개수:" << numOfApples << endl;
+}
+```
+  
+### 3.1.3. 과일 구매/판매 main 작성
+**main**
+```
+#include <iostream>
+#include "FruitSeller.h"
+#include "FruitBuyer.h"
+
+using namespace std;
+
+int main(void) {
+	FruitSeller seller;
+	FruitBuyer buyer;
+	seller.InitMembers(1000, 20, 0);
+	buyer.InitMember(5000);
+	buyer.BuyApples(seller, 2000);
+
+	cout << "파일 판매자의 현항" << endl;
+	seller.ShowSalesResult();
+	cout << "과일 구매자의 현황" << endl;
+	buyer.ShowBuyResult();
+	return 0;
 }
 ```
