Update 03 클래스의 기본.md

--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -438,6 +438,10 @@ using namespace std;
 int main(void) {
 	FruitSeller seller;
 	FruitBuyer buyer;
+
+	// FruitSeller * seller = new FruitSeller;
+	// FruitBuyer * buyer = new FruitBuyer;
+
 	seller.InitMembers(1000, 20, 0);
 	buyer.InitMember(5000);
 	buyer.BuyApples(seller, 2000);
@@ -446,6 +450,13 @@ int main(void) {
 	seller.ShowSalesResult();
 	cout << "과일 구매자의 현황" << endl;
 	buyer.ShowBuyResult();
+
+	// delete seller;
+	// delete buyer;
 	return 0;
 }
 ```
+```FruitBuyer``` 객체가 ```FruitSeller```객체의 SaleApples 함수를 호출하고 있다.      
+그리고 객체지향에서는 이것을 '두 객체가 대화하는 것'으로 본다.        
+따라서 이러한 형태의 함수 호출을 가리켜 '메시지 전달'(메시지 패싱)이라 한다.         
+   
