Update 03 클래스의 기본.md

--- a/03 클래스의 기본.md
+++ b/03 클래스의 기본.md
@@ -459,4 +459,13 @@ int main(void) {
 ```FruitBuyer``` 객체가 ```FruitSeller```객체의 SaleApples 함수를 호출하고 있다.      
 그리고 객체지향에서는 이것을 '두 객체가 대화하는 것'으로 본다.        
 따라서 이러한 형태의 함수 호출을 가리켜 '메시지 전달'(메시지 패싱)이라 한다.         
-   
+     
+**결과**
+```
+파일 판매자의 현항
+남은 사과: 18
+판매 수익: 2000
+과일 구매자의 현황
+현재 잔액:3000
+사과 개수:2
+```
