--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -1,1 +1,31 @@
+04 클래스의 완성
+=======================
+# 1. 정보 은닉
+## 1.1. 소 주제
+### 1.1.1. 내용1
+```
+내용1
+```
+## 1.2. 소 주제
+### 1.2.1. 내용1
+```
+내용1
+```
 
+***
+# 2. 캡슐화
+> 인용
+## 2.1. 소 주제
+### 2.1.1. 내용1
+```
+내용1
+```   
+
+***
+# 3. 대주제
+> 인용
+## 3.1. 소 주제
+### 3.1.1. 내용1
+```
+내용1
+```
