Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -2,7 +2,9 @@
 =======================
 # 1. 정보 은닉
 정보 은닉 : 클래스 멤버를 해당 클래스를 제외한 외부 클래스에서의 접근을 불허하겠다.
-## 1.1. 소 주제
+## 1.1. 정보 은닉의 이해
+멤버변수의 외부접근을 허용하면, 잘못된 값이 저장되는 문제가 발생할 수 있다.  
+따라서 멤버 변수의 외부접근을 막게 되는데, 이를 가리켜 정보은닉이라 한다.   
 ### 1.1.1. 내용1
 ```
 내용1
@@ -18,10 +20,10 @@
 캡슐화 : 대상과 관련이 있는 모든 것들을 해당 클래스에 담아 놓는 것
 캡슐화의 어려운 점은 어디까지 관련이 있는가에 대한 기준이 없기 때문이다.   
   
-캡슐화를 왜 잘 해야하는가 하면 
-각 클래스마다 서로 관련된 내용들이 뒤죽박죽 섞여있으면 어떤 클래스의 변경은 다른 클래스의 변경을 유발할 수 있다.   
-그렇기에 임의의 변경시에 다른 프로그램에 영향을 주는 것을 최소화하고자 캡슐화를 잘해야 한다.
-즉, 클래스 별로 독립성을 최대한 해주어 변경이나 확장에 대해서 대응이 가능한 상태로 클래스 수준을 높이는 것이다.  
+캡슐화를 왜 잘 해야하는가 하면     
+각 클래스마다 서로 관련된 내용들이 뒤죽박죽 섞여있으면 어떤 클래스의 변경은 다른 클래스의 변경을 유발할 수 있다.        
+그렇기에 임의의 변경시에 다른 프로그램에 영향을 주는 것을 최소화하고자 캡슐화를 잘해야 한다.        
+즉, 클래스 별로 독립성을 최대한 해주어 변경이나 확장에 대해서 대응이 가능한 상태로 클래스 수준을 높이는 것이다.      
 
 
 
