Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -2,9 +2,28 @@
 =======================
 # 1. 정보 은닉
 정보 은닉 : 클래스 멤버를 해당 클래스를 제외한 외부 클래스에서의 접근을 불허하겠다.
-## 1.1. 정보 은닉의 이해
-멤버변수의 외부접근을 허용하면, 잘못된 값이 저장되는 문제가 발생할 수 있다.  
-따라서 멤버 변수의 외부접근을 막게 되는데, 이를 가리켜 정보은닉이라 한다.   
+## 1.1. 정보 은닉의 이해     
+멤버변수의 외부접근을 허용하면, 잘못된 값이 저장되는 문제가 발생할 수 있다.       
+따라서 멤버 변수의 외부접근을 막게 되는데, 이를 가리켜 정보은닉이라 한다.       
+   
+![cpp12](https://user-images.githubusercontent.com/50267433/74315011-e1c08300-4db9-11ea-8780-5061f99d8d2a.PNG)   
+       
+위 그림에서 Point 클래스의 멤버 변수에 대해서 어떠한 제한도 지정해줄 수 없고     
+외부에서 접근해서 원치 않는 범위의 값을 넣어주어서 에러를 일으킬 수 있다.      
+   
+이렇듯 접근제어를 외부허용으로 하면 여러 문제를 불러일으킬 수 있다.    
+우리는 이러한 문제점이 일어나지 않게 빈도의 수를 최소한으로 줄여주도록 해야한다.   
+        
+그러기 위해서 처음으로 생각할 수 있는 것은 **함수를 이용해 값을 초기화 하는 것이다.**  
+함수를 이용할 경우 값에 대한 처리를 진행할 수 있고(높고,낮음 등)     
+함수를 사용하지 않고 접근할 경우 매번 값을 할당 해줄 때마다 조심히 처리를 해주어야 하기 때문이다.     
+     
+정보은닉은 함수를 통해서 안정적으로 접근할 수 있는 길을 터주는 것이다.  
+더하여 외부에서 접근했을 때의 빈번히 발생할 수 있는 실수를 막아버리기 위해서 멤버 변수를 private로 선언해주는 것이다.  
+
+ 
+ 
+ 
 ### 1.1.1. 내용1
 ```
 내용1
