--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -27,19 +27,44 @@
          
 ![cpp13](https://user-images.githubusercontent.com/50267433/74319561-82b33c00-4dc2-11ea-9577-d5e4f3e555f8.PNG)        
           
-      
-      
-      
-### 1.1.1. 내용1
+함수만 한번 잘 정의되면 잘못된 접근을 원친적으로 차단할 수 있다.(외부 접근도 막아주면)           
+그리고 이런 함수의 이름 명칭을 지정하는데 암묵적 규칙이 있다.    
+       
+* 값을 할당해주는것은 ```set변수명()```     
+* 값을 가져오는 것은 ```get변수명()```     
+           
+## 1.2. 소스코드                   
+## 1.3. const 함수              
+**멤버함수의 const 선언**
 ```
-내용1
+int getX() const;
+int getY() const;
+void ShowRecInfo() const;
 ```
-## 1.2. 소 주제
-### 1.2.1. 내용1
+const 함수 내에서는 동일한 클래스에 선언된 멤버변수의 값을 변경하지 못한다.      
+     
+**const 함수의 일반 함수 접근 불가**
 ```
-내용1
+int GetNum()
+{
+     return num;
+}
+void ShowNum() const
+{
+     cout<<GetNum()<<endl;
+}
+``` 
+const 함수는 const가 아닌 함수를 호출하지 못한다.              
+즉, 간접적인 멤버의 변경 가능성까지 완전히 차단한다.       
+     
+**const 함수의 const 함수 접근 가능**
 ```
-
+void InitNum(const EasyClass &easy){
+     num = easy.GetNum();
+}
+```
+const로 상수화 된 객체를 대상으로는 const 멤버함수만 호출이 가능하다.   
+    
 ***
 # 2. 캡슐화
 캡슐화 : 대상과 관련이 있는 모든 것들을 해당 클래스에 담아 놓는 것
