Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -42,6 +42,7 @@ int getY() const;
 void ShowRecInfo() const;
 ```
 const 함수 내에서는 동일한 클래스에 선언된 멤버변수의 값을 변경하지 못한다.      
+get은 단순히 값만 불러오도록 정의하지만 혹시나 하는 안정성을 추가하기 위해서 const를 추가해서 사용한다.  
      
 **const 함수의 일반 함수 접근 불가**
 ```
