--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -32,9 +32,8 @@
        
 * 값을 할당해주는것은 ```set변수명()```     
 * 값을 가져오는 것은 ```get변수명()```     
-           
-## 1.2. 소스코드                   
-## 1.3. const 함수              
+             
+## 1.2. const 함수              
 **멤버함수의 const 선언**
 ```
 int getX() const;
@@ -65,7 +64,140 @@ void InitNum(const EasyClass &easy){
 }
 ```
 const로 상수화 된 객체를 대상으로는 const 멤버함수만 호출이 가능하다.   
+     
+## 1.3. 소스코드                   
+**point.h**
+```
+#ifndef __POINT_H_
+#define __POINT_H_
+
+class Point
+{
+	int x; 
+	int y;    
+public:
+	Point(const int &xpos, const int &ypos);
+	int GetX() const;
+	int GetY() const;
+	bool SetX(int xpos);
+	bool SetY(int ypos);
+};
+
+#endif
+```   
     
+**point.c**
+```
+#include <iostream>
+#include "Point.h"
+using namespace std;
+
+Point::Point(const int &xpos, const int &ypos)
+{
+	x=xpos;
+	y=ypos;
+}
+
+int Point::GetX() const {return x;}
+int Point::GetY() const {return y;}
+
+bool Point::SetX(int xpos)
+{
+	if(0>xpos || xpos>100)
+	{
+		cout<<"벗어난 범위의 값 전달"<<endl;
+		return false;
+	}
+
+	x=xpos;
+	return true;
+}	
+bool Point::SetY(int ypos)
+{
+	if(0>ypos || ypos>100)
+	{
+		cout<<"벗어난 범위의 값 전달"<<endl;
+		return false;
+	}
+
+	y=ypos;
+	return true;
+}
+```
+**rectangle.h**
+```
+#include <iostream>
+#include "Point.h"
+using namespace std;
+
+Point::Point(const int &xpos, const int &ypos)
+{
+	x=xpos;
+	y=ypos;
+}
+
+int Point::GetX() const {return x;}
+int Point::GetY() const {return y;}
+
+bool Point::SetX(int xpos)
+{
+	if(0>xpos || xpos>100)
+	{
+		cout<<"벗어난 범위의 값 전달"<<endl;
+		return false;
+	}
+
+	x=xpos;
+	return true;
+}	
+bool Point::SetY(int ypos)
+{
+	if(0>ypos || ypos>100)
+	{
+		cout<<"벗어난 범위의 값 전달"<<endl;
+		return false;
+	}
+
+	y=ypos;
+	return true;
+}
+```
+**rectangle.c**
+```
+#include <iostream>
+#include "Rectangle.h"
+using namespace std;
+
+Rectangle::Rectangle(const int &x1, const int &y1, const int &x2, const int &y2)
+			:upLeft(x1, y1), lowRight(x2, y2)
+{
+	// empty
+}
+
+void Rectangle::ShowRecInfo() const
+{
+	cout<<"좌 상단: "<<'['<<upLeft.GetX()<<", ";
+	cout<<upLeft.GetY()<<']'<<endl;
+	cout<<"우 하단: "<<'['<<lowRight.GetX()<<", ";
+	cout<<lowRight.GetY()<<']'<<endl<<endl;
+}
+```
+**main**
+```
+#include<iostream>
+#include "Point.h"
+#include "Rectangle.h"
+using namespace std;
+
+int main(void)
+{
+
+	Rectangle rec(1, 1, 5, 5);
+	rec.ShowRecInfo();
+	return 0;
+}
+```
+ 
 ***
 # 2. 캡슐화
 캡슐화 : 대상과 관련이 있는 모든 것들을 해당 클래스에 담아 놓는 것
