Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -63,7 +63,8 @@ void InitNum(const EasyClass &easy){
      num = easy.GetNum();
 }
 ```
-const로 상수화 된 객체를 대상으로는 const 멤버함수만 호출이 가능하다.   
+const로 상수화 된 객체라도 const 멤버 함수가 아니면 호출이 안된다 
+하지만 const로 상수화 된 객체를 대상으로는 const 멤버함수도 호출이 가능하다.   
      
 ## 1.3. 소스코드                   
 **point.h**
