Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -208,8 +208,13 @@ int main(void)
 각 클래스마다 서로 관련된 내용들이 뒤죽박죽 섞여있으면 어떤 클래스의 변경은 다른 클래스의 변경을 유발할 수 있다.        
 그렇기에 임의의 변경시에 다른 프로그램에 영향을 주는 것을 최소화하고자 캡슐화를 잘해야 한다.        
 즉, 클래스 별로 독립성을 최대한 해주어 변경이나 확장에 대해서 대응이 가능한 상태로 클래스 수준을 높이는 것이다.      
-
-
+          
+![cpp14](https://user-images.githubusercontent.com/50267433/74324373-4d125100-4dca-11ea-9860-2dd6b17fade5.PNG)        
+         
+위 그림에서 각각의 용도에 맞춰서 클래스를 정의했다고 하면 캡슐화에 성공한 것이지만 
+조금 더 큰 틀, 예를 들면 코감기에 관한 것으로 기준을 정했을 시에는 캡슐화에 실패한 것이다.      
+즉, 캡슐화는 어떻게 사용이 되냐에 따라 즉, 관점에 따라 캡슐화가 된 것일 수 있고 아닐 수도 있어 어렵다.   
+   
 
 
 ## 2.1. 소 주제
