--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -201,21 +201,25 @@ int main(void)
  
 ***
 # 2. 캡슐화
-캡슐화 : 대상과 관련이 있는 모든 것들을 해당 클래스에 담아 놓는 것
-캡슐화의 어려운 점은 어디까지 관련이 있는가에 대한 기준이 없기 때문이다.   
-  
-캡슐화를 왜 잘 해야하는가 하면     
-각 클래스마다 서로 관련된 내용들이 뒤죽박죽 섞여있으면 어떤 클래스의 변경은 다른 클래스의 변경을 유발할 수 있다.        
-그렇기에 임의의 변경시에 다른 프로그램에 영향을 주는 것을 최소화하고자 캡슐화를 잘해야 한다.        
-즉, 클래스 별로 독립성을 최대한 해주어 변경이나 확장에 대해서 대응이 가능한 상태로 클래스 수준을 높이는 것이다.      
-          
-![cpp14](https://user-images.githubusercontent.com/50267433/74324373-4d125100-4dca-11ea-9860-2dd6b17fade5.PNG)        
+캡슐화 : 대상과 관련이 있는 모든 것들을 해당 클래스에 담아 놓는 것     
+캡슐화의 어려운 점은 어디까지 관련이 있는가에 대한 기준이 없기 때문이다.     
+      
+캡슐화를 왜 잘 해야하는가 하면        
+각 클래스마다 서로 관련된 내용들이 뒤죽박죽 섞여있으면 어떤 클래스의 변경은 다른 클래스의 변경을 유발할 수 있다.                
+그렇기에 임의의 변경시에 다른 프로그램에 영향을 주는 것을 최소화하고자 캡슐화를 잘해야 한다.          
+즉, 클래스 별로 독립성을 최대한 해주어 변경이나 확장에 대해서 대응이 가능한 상태로 클래스 수준을 높이는 것이다.         
+              
+![cpp14](https://user-images.githubusercontent.com/50267433/74324373-4d125100-4dca-11ea-9860-2dd6b17fade5.PNG)          
+                
+위 그림에서 각각의 용도에 맞춰서 클래스를 정의했다고 하면 캡슐화에 성공한 것이지만           
+조금 더 큰 틀, 예를 들면 코감기에 관한 것으로 기준을 정했을 시에는 캡슐화에 실패한 것이다.           
+즉, 캡슐화는 어떻게 사용이 되냐에 따라 즉, 관점에 따라 캡슐화가 된 것일 수 있고 아닐 수도 있어 어렵다.     
+그렇기에 우리는 정확한 기준을 잡아서 캡슐화를 진행하도록 주의해야한다.   
          
-위 그림에서 각각의 용도에 맞춰서 클래스를 정의했다고 하면 캡슐화에 성공한 것이지만 
-조금 더 큰 틀, 예를 들면 코감기에 관한 것으로 기준을 정했을 시에는 캡슐화에 실패한 것이다.      
-즉, 캡슐화는 어떻게 사용이 되냐에 따라 즉, 관점에 따라 캡슐화가 된 것일 수 있고 아닐 수도 있어 어렵다.   
-   
-
+![cpp15](https://user-images.githubusercontent.com/50267433/74325047-4f28df80-4dcb-11ea-809b-af099c9b599f.PNG)    
+         	 
+캡슐화가 잘 되어 있다면 그림의 밑 부분 처럼 변경이 있더라도 클래스의 함수 정의만 바꿔주면 된다.   
+또한 멤버 변수로 클래스가 아닌 해당 클래스의 멤버 변수로 작성해도 상관 없으니 알맞게 작석해주면 된다.   
 
 ## 2.1. 소 주제
 ### 2.1.1. 내용1
