--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -219,18 +219,76 @@ int main(void)
 ![cpp15](https://user-images.githubusercontent.com/50267433/74325047-4f28df80-4dcb-11ea-809b-af099c9b599f.PNG)    
          	 
 캡슐화가 잘 되어 있다면 그림의 밑 부분 처럼 변경이 있더라도 클래스의 함수 정의만 바꿔주면 된다.   
-또한 멤버 변수로 클래스가 아닌 해당 클래스의 멤버 변수로 작성해도 상관 없으니 알맞게 작석해주면 된다.   
-
-## 2.1. 소 주제
-### 2.1.1. 내용1
-```
-내용1
-```   
-
+또한 멤버 변수로 클래스가 아닌 해당 클래스의 멤버 변수로 작성해도 상관 없으니 알맞게 작성해주면 된다.   
+   
 ***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
+# 3. 생성자와 소멸 
+생성자 : 객체를 생성과 동시에 초기화를 진행해주는 것 (함수의 일종)                
+(생성자는 객체가 생성될 때 자동으로 호출되어 초기화하는 함수이다.)      
+      
+소멸자 : 객체가 소멸될 때 자동으로 호출되는 함수이다.       
+(정리가 필요한 연산들을 정리해주기 위해 사용한다. 예를 들면 new로 할당 된 것은 delete를 해주어야 한다.)         
+
+## 3.1. 생성자의 이해
+**예시 클래스**       
+![cpp16](https://user-images.githubusercontent.com/50267433/74333371-26a8e180-4ddb-11ea-83c9-4e76579a3131.PNG)    
+      
+생성자는 클래스의 이름과 동일하며 반환형이 없다.            
+생성자는 객체 생성시에만 딱 한번 호출된다.          
+생성자도 함수의 일종으로 오버로딩이 가능하고 디폴트 값 설정도 가능하다.       
+     
+**생성자를 이용한 객체생성**  
+```
+struct	: Class class(20);
+class	: Class class = new Class(20); 
+```
+    
+참고로 객체를 생성함에 있어 무조건 생성자가 실행이 되어야 한다.          
+하지만 이전에 우리는 생성자를 정의하지 않았는데 객체가 생성되었다 이유는 무엇일까?          
+사실 생성자를 정의하지 않으면 디폴트 생성자를 생성해서 호출했다.              
+디폴트 생성자에는 정의된 내용이 아무것도 없다.                   
+또한 ```new 클래스```형태도 void 생성자를 호출한 것과 같은 의미였다.    
+       
+하지만 디폴트 생성자는 생성자를 정의하지 않았을 경우에만 생성되고 호출되는 것이다.        
+즉, 기존에 인자값이 있는 생성자를 정의했을 경우 디폴트 생성자 구문을 사용할 수 없다.        
+```(Class class 또는 Class class = new Class를 사용할 수 없게 된다.)```       
+인자값이 없는 생성자를 사용하고 싶다면 오버로딩을 이용해서 생성자를 생성해주면 된다.     
+
+![cpp17](https://user-images.githubusercontent.com/50267433/74334859-1b0aea00-4dde-11ea-9972-d321a095bee9.PNG)   
+   
+위 그림과 같이 new 키워드가 아닌 일반적으로 객체를 생성할 때 ```()```를 사용할 수 없다.        
+이유는 간단하게 위와 같은 구조는 생성자인지 아니면 함수를 사용하는지 헷갈리기 때문이다.         
+new 키워드 같은 경우는 동적으로 메모리를 생성한다는 뜻으로 구분이 가능해서 사용이 가능하다.   
+    
+그리고 위 그림처럼 조건에 맞으면 오버로딩, 디폴트 값 생성도 가능하다.   
+   
+## 3.2. 클래스내의 클래스 생성자 - 이니셜라이저   
+    
+![cpp18](https://user-images.githubusercontent.com/50267433/74337597-ee59d100-4de3-11ea-8a8e-a6da36851b0b.PNG)
+   
+클래스 멤버로 클래스 변수를 지정할 수 있다.        
+하지만 만약에 변수가 된 클래스에서 생성할시 값을 요구하게 된다면 즉, 인자가 있는 생성자가 있다면 문제가 생긴다.  
+왜냐하면 내부 클래스를 위한 생성자를 호출해야 하는데 어떤 생성자를 호출해야 할지 지정 '표시'를 못하기 때문이다.    
+      
+그래서 C++에서는 이니셜라이저 문법을 지원한다.  
+
+**이니셜라이저 예시**
+```
+Rectangle::Regtangle(const int &x1, const int &y1, const int &x2, const int &y2)
+	:upLeft(x1, y1), lowRight(x2, y2)  // 변수() 구조  
+{
+	.	.	.	.	.	.
+}	
+```
+이니셜라이저는 멤버변수의 초기화도 가능하며,   
+이렇게 초기화 하는 경우 선언과 동시에 초기화되는 형태로 바이너리가 구성된다.   
+**즉, 변수의 생성과 동시에 초기화가 되기에 랜덤 값 부여가 되지않는다.**     
+그리고 이러한 특성으로 인해 **const로 선언된 멤버변수도 초기화 가능하다.**     
+      
+![cpp19](https://user-images.githubusercontent.com/50267433/74338442-85735880-4de5-11ea-8b32-1d8dc9e5b3af.PNG)   
+    
+    
+     
 ### 3.1.1. 내용1
 ```
 내용1
